*Empty MediaWiki Message*

--- a/ټولنپوهنه.mw
+++ b/ټولنپوهنه.mw
@@ -1,4 +1,4 @@
-'''ټولنپوهنه''' د دوو ويونو، ټولنې او پوهنې تړنګنوم دی چې په انګريزي ژبه '''socialogy''' يا سوسيالوژي، په پارسي ژبه ورته '''جامعه شناسي''' او په عربي ژبه ورته '''علم الاجتماع''' وايي. (from Latin: ''socius'', "companion"; and Greek: λόγος, ''logos'', "knowledge") is an academic and applied discipline that studies [[society]] and human social interaction. Sociological [[research]] ranges from the analysis of short [[social contact|contacts]] between anonymous individuals on the street to the study of [[globalization|global social processes]]. The field focuses on how and why people are organized in society, either as [[individual]]s or as members of [[Voluntary association|associations]], [[Group (sociology)|groups]], and [[social institution|institutions]]. As an [[academic discipline]], sociology is typically considered a [[social science]]. 
+'''ټولنپوهنه''' د دوو ويونو، ټولنې او پوهنې تړنګنوم دی چې په انګريزي ژبه '''socialogy''' يا سوسيالوژي، په پارسي ژبه ورته '''جامعه شناسي''' او په عربي ژبه ورته '''علم الاجتماع''' وايي. ټولنپوهنه د اکادميکو زده کړو يو ډګر دی چې د ټولنې په او په ټولنه کې د انسانانو ټولنيزو راکړې ورکړې په اړه بحث کوي. ټولنيزې څېړنې بيا په کوڅه کې د ورکنومو وګړو د لنډو اړيکو د شننو نه نيولې تر نړېوالې ټولنيزې پروسې په ځان کې رانغاړي. د زده کړې په همدې ډګر کې د يو داسې يو ليد لوري ته اشاره شوې چې ولې خلک په ټولنو کې تنظيم شوي، او يا هم ولې د يو وګړي په توګه يا د يوې اتحاديې د غړو، د ډلو او انسټيټيوټونو غړو په توګه انسانو خپل ځان ته منظمې ټولنې جوړې کړي. د يو اکاډميک زده کړې په توګه ټولنپوهنه د ټولنيزو ساينسونو اهمه برخه ده.
 
 One useful way to describe the discipline is as a cluster of sub-disciplines (sometimes called fields) that examine different dimensions of society. For example, [[social stratification]] studies inequality and [[class structure]]; [[demography]] studies changes in a [[population size]] or type; [[criminology]] examines criminal behavior and deviance; [[political sociology]] studies government and laws; and the [[race relations|sociology of race]] and [[sociology of gender]] examine the [[social construction]] of race and gender as well as race and [[Gender gap|gender inequality]].  New sociological fields and sub-fields&mdash;such as [[network analysis]] and [[environmental sociology]]&mdash;continue to evolve; many of them are cross-disciplinary in nature. 
 
