--- a/ټولنپوهنه.mw
+++ b/ټولنپوهنه.mw
@@ -146,22 +146,21 @@ Recent best-selling books such as ''The Tipping Point'' by [[Malcolm Gladwell]] 
 * [http://www.insoso.org/  Indian Sociological Society]
 
 ===نورې سرچينې===
-* [http://www.sociology.org/ Electronic Journal of Sociology]
-* [http://www.sociolog.com/ SocioLog], a directory of sociology resources
-*[http://www.sociosite.net/ SocioSite], a directory of sociology resources
-*[http://tech.groups.yahoo.com/group/sociology_today/ Sociology Today e-forum]
+* [http://www.sociology.org/ د ټولنپوهنې برېښنايي ژورنال]
+* [http://www.sociolog.com/ SocioLog], د ټولنپوهنې د سرچينو يو لارښود
+*[http://www.sociosite.net/ SocioSite], د ټولنپوهنې د سرچينو يو لارښود
+*[http://tech.groups.yahoo.com/group/sociology_today/ د نن ټولنپوهنه يو برېښناييز فورم]
 
 {{Social sciences-footer}}
 
-[[Category:Sociology|  ]]
-[[Category:Social sciences]]
+[[وېشنيزه:ټولنپوهنه|  ]]
+[[وېشنيزه:ټولنيز ساينسونه]]
 
 {{Link FA|ar}}
 {{Link FA|bs}}
 {{Link FA|he}}
 
-<font face="Pashto Kror Asiatype">
-**[[ټولنه]]
+*[[ټولنه]]
 
 [[af:Sosiologie]]
 [[am:የባሕል ጥናት (ሶሲዮሎጂ)]]
