/* Methods of sociological inquiry */

--- a/ټولنپوهنه.mw
+++ b/ټولنپوهنه.mw
@@ -74,7 +74,7 @@ In empirical social research, empirical findings can provide support for sociolo
 ==ټولنپوهنيزه څېړنه==
 {{main|social research}}
 The basic goal of sociological research is to understand the social world in its many forms.   [[Quantitative method]]s and [[qualitative method]]s are two main types of [[social research]] methods. Sociologists often use [[quantitative method]]s -- such as [[social statistics]] or [[network analysis]] - to investigate the structure of a social process or describe patterns in social relationships.  Sociologists also often use [[qualitative method]]s - such as focused [[interview]]s, group discussions and [[ethnography|ethnographic]] methods - to investigate social processes. Sociologists also use applied research methods such as [[evaluation research]] and [[assessment]]. 
-===Methods of sociological inquiry===
+===د ټولنپوهنيزو ګروېږنو چلندلار===
 Sociologists use many types of social research methods, including:
 *Archival research - Facts or factual evidences from a variety of records are compiled. 
 *Content Analysis - The contents of books and [[mass media]] are analyzed to study how people communicate and the messages people talk or write about. 
