/* Positivism and anti-positivism */

--- a/ټولنپوهنه.mw
+++ b/ټولنپوهنه.mw
@@ -25,7 +25,7 @@ The first European department of sociology was founded in 1895 at the [[Universi
 
 International cooperation in sociology began in 1893 when [[René Worms]] founded the small ''[[Institut International de Sociologie]]'' that was later on eclipsed by the much larger [[International Sociological Association]] [http://www.isa-sociology.org/] starting in 1949 (ISA). 1905, the [[American Sociological Association]], the world's largest [[Voluntary association|association]] of professional sociologists, was founded; in 1909 as well the ''Deutsche Gesellschaft für Soziologie'' ([[German Society for Sociology]]) by [[Ferdinand Tönnies]], [[Max Weber]] et al.
 
-===Positivism and anti-positivism===
+===مثبتواله او بډمثبتواله===
 :''Articles: [[Positivism]], [[Sociological positivism]], and [[Antipositivism]].''
 
 Early theorists' approach to sociology, led by [[Comte]], was to treat it in much the same manner as [[natural science]], applying the same methods and [[methodology]] used in the natural sciences to study [[Social phenomenon|social phenomena]]. The emphasis on [[empiricism]] and the [[scientific method]] sought to provide an incontestable foundation for any sociological claims or findings, and to distinguish sociology from less empirical fields such as [[philosophy]]. This methodological approach, called [[Sociological positivism|positivism]] aspires to [[explanation]] and [[prediction]].  A non-trivial share of sociologists reject these goals. 
