--- a/انسان_پيژندنه.mw
+++ b/انسان_پيژندنه.mw
@@ -204,10 +204,10 @@ Other political controversies come from the emphasis in American anthropology on
 * [http://anthro.palomar.edu/tutorials/ Palomar College Anthropology Tutorials] - Tutorials on anthropological topics such as economic systems, kinship, subsistence, religion, and evolution
 
 {{Social sciences-footer}}
-[[Category:Anthropology| ]]
-[[Category:Behavioural sciences]]
-[[Category:Humanities occupations]]
-[[Category:Mammalogy]]
+[[وېشنيزه:وګړپوهنه| ]]
+[[وېشنيزه:Behavioural sciences]]
+[[وېشنيزه:Humanities occupations]]
+[[وېشنيزه:Mammalogy]]
 
 {{Link FA|es}}
 
