--- a/حبيب_الله_زړه_سواند.mw
+++ b/حبيب_الله_زړه_سواند.mw
@@ -2,3 +2,16 @@
 
 == زده کړې ==
 نوموړي تر شپږم ټولګي پورې د شپولې په ښوونځي کې سر ته رسولي او بيا يې تر ۱۲ ټولګي پورې په حربي ښوونځي کې زده کړې کړي او په ۱۳۴۳ ل. کال کې د دوولسم ټولګي د بری ليک د اخيستو وروسته د پوځي زده کړو لپاره هند ته تللی او هلته يې خپلې زده کړې بشپړې کړي. بيا د پخواني چېکسلواکيې هېواد کې د جيوليو فويچ د ژورناليزم په نړېوال پوهنتون کې د ژورناليزم په څانګه کې زده کړې ترلاسه کړي.
+
+
+
+
+
+
+
+
+
+
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:پښتانه]]
