--- a/نورالبشر_نويد.mw
+++ b/نورالبشر_نويد.mw
@@ -6,9 +6,9 @@
 == زده کړې ==
 
 == چاپي آثار ==
-##مشالونه (د شعرنو غونډ)
-##ماته غوږ شه (په دوه ټوکونو کې د نثرونو ټولګه)
-##وطن يا کفن (د افغانستان د پخواني ولسمشر ډاکټر نجيب الله په اړه ليکل شوي نثرونه)
+#مشالونه (د شعرنو غونډ)
+#ماته غوږ شه (په دوه ټوکونو کې د نثرونو ټولګه)
+#وطن يا کفن (د افغانستان د پخواني ولسمشر ډاکټر نجيب الله په اړه ليکل شوي نثرونه)
 
 == ناچاپه آثار ==
 
