--- a/معصومه_عصمتي_وردگ.mw
+++ b/معصومه_عصمتي_وردگ.mw
@@ -23,6 +23,6 @@
 اغلې عصمتي وردګ د هېواد د ملي او علمي شخصيت او د مرحوم محمد داوودخان په کابينه کې د پوهنې ، کانو او صنايعو او سرحدونو وزير خدای بخښلی پوهاند ډاکټر عبدالقيوم وردګ د ژوند ملګرې وه. په دې لنډو وختونو کې د هغې د مړينې خبر ډېر په ټول افغان وېبپاڼه کې خپور شو. د هغې د مړينې له کبله په هېواد کې دننه او دباندې ډېريو فرهنګي ټولنو د خواخوږۍ او غمشريکۍ اعلانونه خپاره کړل. په رښتيا چې د افغانستان او افغانانو لپاره د داسې يوې مېرمنې مړينه لويه ضايه ده او د ويکيپېډيا د ليکوالو ډلګۍ هم د نوموړې درنې کورنۍ ته خپل د خواشينۍ د څرګندولو سره سره، لاسونه په دعاګانو پورته کوي او نوموړې ته د پاک الله (ج) نه د فردوس جنت غوښتنه کوي.
 
 
-[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:پښتانه ليکوالان]]
 [[وېشنيزه:افغانان]]
 [[وېشنيزه:افغان وزيران]]
