*Empty MediaWiki Message*

--- a/محمد_صديق_پسرلی.mw
+++ b/محمد_صديق_پسرلی.mw
@@ -1,2 +1,2 @@
-[[Image:Pasarlay.jpg|thumb|289px|استاد محمد صديق پسرلی]]
-[[Category: پښتانه شاعران]]
+[[انځور:Pasarlay.jpg|thumb|250px|استاد محمد صديق پسرلی]]
+[[وېشنيزه: پښتانه شاعران]]
