--- a/حبيب_الله_زړه_سواند.mw
+++ b/حبيب_الله_زړه_سواند.mw
@@ -3,13 +3,26 @@
 == زده کړې ==
 نوموړي تر شپږم ټولګي پورې د شپولې په ښوونځي کې سر ته رسولي او بيا يې تر ۱۲ ټولګي پورې په حربي ښوونځي کې زده کړې کړي او په ۱۳۴۳ ل. کال کې د دوولسم ټولګي د بری ليک د اخيستو وروسته د پوځي زده کړو لپاره هند ته تللی او هلته يې خپلې زده کړې بشپړې کړي. بيا د پخواني چېکسلواکيې هېواد کې د جيوليو فويچ د ژورناليزم په نړېوال پوهنتون کې د ژورناليزم په څانګه کې زده کړې ترلاسه کړي.
 
+== دندې ==
 
+== چاپ شوي آثار ==
+#لېونۍ د لنډو کيسو ټولګه
+#ننواتی د شعرونو غونډ
+#سپينه ډوډۍ (ژباړه)
+#ارمانونه د شعرونو غونډ
+#مرور ماښام د شعرونو غونډ
+#د ګلانو سړی (ژباړه)
+#شعرونه او شوګيرونه د شعرونو غونډ
+#د ماشوم غږ د شعرونو غونډ
+#سپينه کوتره د لنډو کيسو ټولګه
+#تڼاکه د شعرونو غونډ
+#د سيند په غاړه د شعرونو غونډ
+#وينې پر ګلاب وينی د شعرونو غونډ
 
-
-
-
-
-
+== ناچاپه آثار ==
+#شاتو کې زهر لنډه کيسه
+#زه چې ماشوم وم لنډه کيسه
+#ګل شو پاڼې پاڼې د څلوريځو ټولګه
 
 
 [[وېشنيزه:پښتانه شاعران]]
