/* چاپ شوي آثار */

--- a/حبيب_الله_زړه_سواند.mw
+++ b/حبيب_الله_زړه_سواند.mw
@@ -6,18 +6,18 @@
 == دندې ==
 
 == چاپ شوي آثار ==
-#لېونۍ د لنډو کيسو ټولګه
-#ننواتی د شعرونو غونډ
-#سپينه ډوډۍ (ژباړه)
-#ارمانونه د شعرونو غونډ
-#مرور ماښام د شعرونو غونډ
-#د ګلانو سړی (ژباړه)
-#شعرونه او شوګيرونه د شعرونو غونډ
-#د ماشوم غږ د شعرونو غونډ
-#سپينه کوتره د لنډو کيسو ټولګه
-#تڼاکه د شعرونو غونډ
-#د سيند په غاړه د شعرونو غونډ
-#وينې پر ګلاب وينی د شعرونو غونډ
+#''لېونۍ'' د لنډو کيسو ټولګه
+#''ننواتی'' د شعرونو غونډ
+#''سپينه ډوډۍ'' (ژباړه)
+#''ارمانونه'' د شعرونو غونډ
+#''مرور ماښام'' د شعرونو غونډ
+#''د ګلانو سړی'' (ژباړه)
+#''شعرونه او شوګيرونه'' د شعرونو غونډ
+#''د ماشوم غږ'' د شعرونو غونډ
+#''سپينه کوتره'' د لنډو کيسو ټولګه
+#''تڼاکه'' د شعرونو غونډ
+#''د سيند په غاړه'' د شعرونو غونډ
+#''وينې پر ګلاب وينی'' د شعرونو غونډ
 
 == ناچاپه آثار ==
 #شاتو کې زهر لنډه کيسه
