--- a/قيوم_مروت.mw
+++ b/قيوم_مروت.mw
@@ -3,7 +3,7 @@
 قيوم مروت د پښتونخوا په تکړه شاعرانو کې شمېرل کېږي.
 
 == زېږېدنه ==
-قيوم مروت په ۲۵، د ډېسمبر ۱۹۴۴ کال کې په ټانک کې پېدا شوی. د His grand father belonged to village Bajukhel, Lakki Marwat, but he moved to Tank and settled permanently there in 1938.
+قيوم مروت په ۲۵، د ډېسمبر ۱۹۴۴ کال کې په ټانک کې پېدا شوی. د هغه پلرنی ټاټوبی د لکي مروت د باجوخېلو کلی دی خو د هغه نيکه په ۱۹۳۸ ز. کال کې ټانک ته راکډه شوی او همدلته مېشت شوی.
 
 == زده کړې ==
 
