/* د شعر يوه بېلګه */

--- a/گل_آغا_احمدي_وردگ.mw
+++ b/گل_آغا_احمدي_وردگ.mw
@@ -23,34 +23,17 @@
 لومړى ټولګه مې د ارمانجن په نامه په پيښور كې د دانش د خپرونديې موسسې له خوا زما په خپل شخصي لګښت چاپ شوې او زما د ټولو ليكل شوو او ژباړل شوو كتابونو شميره ١٥ ټوكو ته رسيږي چې لنډې كيسې، تاريخي، سياسي، او ټولنيز موضوعات  پكې رانغښتل شوي او د چاپ انتظار باسي.
 
 == د شعر يوه بېلګه ==
-
+<center>
 افغان زلمى
-
-كه مې د زاڼو ټولګى را نه ووست بهار به نه يم
-
-كه مې رڼا ته غيږه ورنكړه سهار به نه يم
-
-كه مې د ګلو په ډولۍ باندې لاس وا نه ړول
-
-كه مې ګيډۍ ګيډۍ غنچې نه كړه ګلزار به نه يم
-
-كه مې د بڼ په سر هوار نه كړل زرغون پړوني
-
-كه لوړ له ټولو ښكلو نه شومه چنار به نه يم
-
-كه د نڅا په پلوشوكې مې ګلشن نه شو پټ
-
-كه مې سندرې پرې خورې نه كړې سيتار به نه يم
-
-كه مې د سولې اشرفۍ ورته ډالۍ نه كړله
-
-كه يې له غاړې نه راتاو نه شومه هار به نه يم
-
-كه د تورتم تخمونه ورك ما له دې خاورې نه كړه
-
-افغان زلمى احمدي زه د دې ديار به نه يم
-
-
+{{شعر}}
+{{ب|كه مې د زاڼو ټولګى را نه ووست بهار به نه يم|كه مې رڼا ته غيږه ورنكړه سهار به نه يم}}
+{{ب|كه مې د ګلو په ډولۍ باندې لاس وا نه ړول|كه مې ګيډۍ ګيډۍ غنچې نه كړه ګلزار به نه يم}}
+{{ب|كه مې د بڼ په سر هوار نه كړل زرغون پړوني|كه لوړ له ټولو ښكلو نه شومه چنار به نه يم}}
+{{ب|كه د نڅا په پلوشوكې مې ګلشن نه شو پټ|كه مې سندرې پرې خورې نه كړې سيتار به نه يم}}
+{{ب|كه مې د سولې اشرفۍ ورته ډالۍ نه كړله|كه يې له غاړې نه راتاو نه شومه هار به نه يم}}
+{{ب|كه د تورتم تخمونه ورك ما له دې خاورې نه كړه|افغان زلمى احمدي زه د دې ديار به نه يم}}
+{{د شعر پای}}
+</center>
 
 == باندنۍ تړنې ==
 
