/* چاپ شوي آثار */

--- a/گل_آغا_احمدي_وردگ.mw
+++ b/گل_آغا_احمدي_وردگ.mw
@@ -20,7 +20,10 @@
 
 
 == چاپ شوي آثار ==
-لومړى ټولګه مې د ارمانجن په نامه په پيښور كې د دانش د خپرونديې موسسې له خوا زما په خپل شخصي لګښت چاپ شوې او زما د ټولو ليكل شوو او ژباړل شوو كتابونو شميره ١٥ ټوكو ته رسيږي چې لنډې كيسې، تاريخي، سياسي، او ټولنيز موضوعات  پكې رانغښتل شوي او د چاپ انتظار باسي.
+#ارمانجن د شعرونو غونډ 
+
+== ناچاپه آثار ==
+د ښاغلي وردګ د ټولو ليكل شوو او ژباړل شوو كتابونو شميره ١٥ ټوكو ته رسيږي چې لنډې كيسې، تاريخي، سياسي، او ټولنيز موضوعات  پكې رانغښتل شوي او د چاپ انتظار باسي.
 
 == د شعر يوه بېلګه ==
 <center>
