*Empty MediaWiki Message*

--- a/۱_غويی.mw
+++ b/۱_غويی.mw
@@ -1,1 +1,17 @@
 {{غويی}}
+==پېښې==
+
+==زېږېدنې==
+
+
+
+== مړينې==
+* [[۱۳۱۷]] - '''[[اقبال لاهوری]]'''، د [[پاکستان]] ملي شاعر
+* [[۱۳۳۰]] - '''[[محمدتقی بهار]]'''، د ملک‌الشعرا په نوم مشهور، يو ايرانی ورځپاڼه ليکونکی، ادیب، تاریخپوه، او سیاستپوه (زېږون [[۱۲۶۵]])
+
+
+==د لمانځلو ورځې==
+
+
+==سرچينې او يادښتونه==
+<references />
