--- a/۱_غويی.mw
+++ b/۱_غويی.mw
@@ -6,9 +6,8 @@
 
 
 == مړينې==
-* [[۱۳۱۷]] - '''[[اقبال لاهوری]]'''، د [[پاکستان]] ملي شاعر
+* [[۱۳۱۷]] - '''[[علامه اقبال]]'''، د [[پاکستان]] ملي شاعر
 * [[۱۳۳۰]] - '''[[محمدتقی بهار]]'''، د ملک‌الشعرا په نوم مشهور، يو ايرانی ورځپاڼه ليکونکی، ادیب، تاریخپوه، او سیاستپوه (زېږون [[۱۲۶۵]])
-
 
 ==د لمانځلو ورځې==
 
