robot  Adding: [[vi:Sher Shah Suri]]

--- a/شېر_شاه_سوري.mw
+++ b/شېر_شاه_سوري.mw
@@ -137,4 +137,5 @@ The hardships faced by Sher Shah were no less than that of Humayun. Like Humayun
 [[sv:Sher Shah]]
 [[ta:ஷேர் ஷா சூரி]]
 [[ur:شیر شاہ سوری]]
+[[vi:Sher Shah Suri]]
 [[zh:舍尔沙]]
