*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -27,7 +27,7 @@
 {{د-کارونکي-وخت}}
 <br><br>
 {{کارونکی-دافغانستان}}
-
+{{اسلام-په-بل-هېواد-کې}}
 <br>
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
