*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -28,6 +28,7 @@
 <br><br>
 {{کارونکی-دافغانستان}}
 {{دفايرفاکس-کارن}}
+{{دکارن-جعبه}}
 <br>
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
