*Empty MediaWiki Message*

--- a/دوتنه:گل_پاچا_الفت.jpg.mw
+++ b/دوتنه:گل_پاچا_الفت.jpg.mw
@@ -1,5 +1,4 @@
 
-
-وېشنيزه:پښتانه ليکوالان
-وېشنيزه:پښتانه شاعران
-وېشنيزه:پښتانه
+[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه]]
