--- a/گل_پاچا_الفت.mw
+++ b/گل_پاچا_الفت.mw
@@ -15,12 +15,12 @@
 ارواښاد استاد الفت د پښتو ادب ځلاند ستوری دی ٠ دده شعر ډير سليس ، روان ، خوږ او په عين حال کې له نوښته ډک دي ٠ ډير نازک او نوي خيالات په زړو ساده الفاظو کې ځايوي او ډيرو زړو او له نظره لويدلو مضامينو ته نوي خوند او رنګ ورکوي ٠ په نظم او نثر کې د پوره استدلال خاوند دی ٠ په تيره بيا د ده اشعاراو د نثر خوږې ټوټې له هره حيثه زړه وړونکي دي ٠ په تيره بيا چې په دې ټوټو کې ټولنيز دردونه په ښو اغيزناکو الفاظو بيانوي ٠ په دې ترتيب د ښاغلي الفت په نثر او نظم کې نوښت ، استدلال او انتقادی روح په خورا ساده عباراتو کې ځليږي چې دا د ښاغلي الفت د استاذي نښه بلل کيږی ٠ مرحوم الفت په ټولنيز ژوند کې يو مخي خوش خلقي ، متين او په عين حال کې د ورين تندي خاوندؤ ، مجلس يې ډير خوږ او خبرې يې د مزاحيه روح لرونکي وي چې ځيني ټوکې يې د خلکو په خولو کې جاري دي او ځينې خپرې شوې هم دي ٠
 
 == ځانګړي وړتوبونه ==
-[[Image:GulPacha.PNG|thumb|289px|استاد ګل پاچا الفت]]
+[[انځور:ګل پاچا الفت.jpg|thumb|289px|استاد ګل پاچا الفت]]
 استاد الفت د خپلې ذهني او فکري پوهې له مخکې د کائيناتو په رمزونو او رازونو پوه و او د انسان د پيدايښت او د هغه د ژوند په باب يې خورا مينه لرله ٠ ارواښاد استاد الفت د ژوند پر کيفيت او جوهر ټينګار کاوه ٠ دی داسي وايي که څوک غواړي چې د خلقت او فکرت په رمزونو او اسرارو پوه شي او په يوه شنه پاڼه کې د معرفت دفتر وګوري ، خپل عقل، شعور او احساس دې پر کار واجوي او د زړه سترګې دې وغړوي ٠ په يوه لاره ډير خلک تيريږي ، خو يو نيم پکې چيرته يوه ښکلې مرغلره پيداکړي چې د چا له اميله پريوتي او په خاورو کې پرته ده ٠ 
 
 ارواښاد استاد الفت بل ځای داسي وايي د انسان په وجود کې دوه شيان ډير غزيز معلوميږي چې يوه ته زړه او بل ته دماغ وايي ٠ له دماغ نه علم او فلسفه پيدا شوه ، زړه نه شعر او ادب، ارواښاد الفت ډير کتابونه ليکلي دي ٠ کله د کابل او د مشرقي اتحاد مدير و ، کله په شورا کې وو او کله د کابل دپښتو ټولنې مشر٠ 
 
-خو مونږ د الفت شخصيت په نورو صفاتو پيژنو ، دی يو ډير دقيق او ستر صنعت کار دی ، د الفت هنر په پښتو نثر او نظم کې ښکاري او ځانته يو ځانګړي طرز لري ٠ د الفت نثر هم شعر دی او نظم يې هم شعر دي ٠ کوم وخت يې چې پر نثر څه ليکلي ، نو د فطرت ډير نازک او واړه دقايق ويني ؟ او څرګندوي يې د انسان د ټولنيز ژوند ډيرې ښيګڼې په داسي ژبه بيانوي چې لوستونکي دده استدلال په ښه ډول قانع کوي ٠ د الفت په نثر او نظم کې کوم فلسفې يا تاريخي استدلال نشته خو د فطرت له هره ګوټه داسي دلايل او براهين راباسي چې تر هر رنګ منطقې استدلال ښه او ټينګ وي ٠ د ده هند هم دا دی چې ځانته د استدلال ځانګړي لاره لري او د ژوند عادي پيښې هره يوه دده دپاره د شعر يوه غوره موضوع وي ٠ کله کله د الفت نثر تر نظم خوږوي ، خلک وايي چې نظم پييل دی او يو ناظم مرغلرې پييلي ٠ 
+خو مونږ د الفت شخصيت په نورو صفاتو پيژنو ، دی يو ډير دقيق او ستر صنعت کار دی ، د الفت هنر په پښتو نثر او نظم کې ښکاري او ځانته يو ځانګړي طرز لري ٠ د الفت نثر هم شعر دی او نظم يې هم شعر دي ٠ کوم وخت يې چې پر نثر څه ليکلي ، نو د فطرت ډير نازک او واړه دقايق ويني ؟ او څرګندوي يې د انسان د ټولنيز ژوند ډيرې ښيګڼې په داسي ژبه بيانوي چې لوستونکي دده استدلال په ښه ډول قانع کوي ٠ د الفت په نثر او نظم کې کوم فلسفې يا تاريخي استدلال نشته خو د فطرت له هره ګوټه داسي دلايل او براهين راباسي چې تر هر رنګ منطقې استدلال ښه او ټينګ وي ٠ د ده هند هم دا دی چې ځانته د استدلال ځانګړي لاره لري او د ژوند عادي پيښې هره يوه دده دپاره د شعر يوه غوره موضوع وي ٠ کله کله د الفت نثر تر نظم خوږوي ، خلک وايي چې نظم پييل دی او يو ناظم مرغلرې پييلي ٠
 
 == د شعر يوه بېلګه ==
 ارواښاد کله الفاظ هسي سره پييلي چې تر هر رنګ نظم ښه ښکاري او غوره وي ٠ 
