*Empty MediaWiki Message*

--- a/پروين_فيض_زاده_ملال.mw
+++ b/پروين_فيض_زاده_ملال.mw
@@ -1,2 +1,3 @@
-[[Image:G|thumb|289px|پروين فيض زاده ملال]]
-[[Category: پښتانه شاعران]]
+[[انځور:پروين ملال.jpg|thumb|289px|پروين فيض زاده ملال]]
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوالان]]
