--- a/دوتنه:Naghma.jpg.mw
+++ b/دوتنه:Naghma.jpg.mw
@@ -1,1 +1,10 @@
 نغمه د پښتو د موسيقۍ د "نغمې" يا سُر نوم دی. هر څوک ددې نوم سره اشنا دي. دا انځور د ښاپېرۍ نغمې دی چې د بي بي سي د پښتو پاڼې نه کاپي شوی
+
+
+
+
+
+
+
+
+[[وېشنيزه: پښتانه شاعران]]
