robot  Modifying: [[pt:Jamal al-Din al-Afghani]]

--- a/سيد_جمال_الدين_افغاني.mw
+++ b/سيد_جمال_الدين_افغاني.mw
@@ -131,7 +131,7 @@
 [[ms:Sayid Jamaluddin Asadabadi]]
 [[nl:Jamal al-Din al-Afghani]]
 [[pl:Dżamal ad-Din al-Afghani]]
-[[pt:Jamal al-Din Asadabadi]]
+[[pt:Jamal al-Din al-Afghani]]
 [[sv:Jamal al-din Asadabadi]]
 [[tr:Cemaleddin Afgani]]
 [[ur:جمال الدین افغانی]]
