*Empty MediaWiki Message*

--- a/سنګال.mw
+++ b/سنګال.mw
@@ -270,6 +270,7 @@ Arrondissements: see [[Arrondissements of Senegal]]
 [[gd:Seanagal]]
 [[gl:Senegal - Sénégal]]
 [[gv:Yn Tenegaal]]
+[[ha:Senegal]]
 [[he:סנגל]]
 [[hi:सेनेगल]]
 [[hr:Senegal]]
