--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -1,16 +1,33 @@
-'''قيام الدين خادم''' په ۱۲۸۶لمريز کال دکامي ولسوالی په يوي روحاني کورنۍ کښې دنياته سترگې پرانيستي دي . دخادم صاحب پلار مرحوم ملا حسام الدين اخوند پخپله سيمه کښي يو مشهور او پوه عالم و .
+'''ارواښاد قيام الدين خادم''' د پښتو ژبي او ادب يو پياوړى ليكوال، شاعر او پوه عالم و، او پدې لاره کښي يې زيات زيار ايستلۍ . خادم صاحب په رښتيا سره دپښتو ژبي او ادب خادم و ،په همدي دليل هغه د پښتو ژبي او ادب د ځلانده آسمان يوله روڼو ستورو څخه گڼل کيږي . استاد د پښتو ژبي او ادب په باب پوره او په زړه پوري منظوم او منثور آثار ليكلي اويوه ښه علمي ذخيره يې زموږ دهيواد راتونکي نسل ته پرې ايښې دي، چي اوس د پښتو ژبي او ادب ليوال ورباندي وياړ ي .
+
+== مخينه ==
+قيام الدين خادم په ۱۲۸۶ لمريز کال دکامې ولسوالۍ په يوې روحاني کورنۍ کې دنيا ته سترګې پرانيستي دي . د ارواښاد خادم پلار مرحوم ملا حسام الدين اخوند پخپله سيمه کې يو مشهور او پوه عالم و. خادم صاحب دوه نيم کاله په لواړگي کې اوسېده ،همدلته د شاعرۍ ،ليکوالۍ او ادبياتو سره د هغه مرموزې لېوالتياوې راوټوکېدې، بيا په لواړګي کې پاتې شو او هماغلته يې کوزده او واده وکړ.
 
 == زده کړې ==
-لومړنۍ زده کړي پخپل کور کښي دخپلو والدينو څخه تر سره کړيدي . خادم صاحب داسلامي علومو زيات شمير کتابونه لوستي وه ؛ هغه صرف ،نحوه ،منطق حکمت ،فقه ،حديث ، تفسير اونور مروجه علوم يي لوستلي دي . هغه دديني پوهي دترلاسه کولو لپاره 15 کاله دهيواد په داخل او له هيواد نه بهر سفرونه کړېدي .
+لومړنۍ زده کړې يې پخپل کور کې د خپلو والدينو څخه تر سره کړي دي . خادم صاحب د اسلامي علومو ګڼ شمير کتابونه لوستي وه؛ هغه صرف ،نحوه ،منطق حکمت ،فقه ،حديث ، تفسير او د نور دوديزو علومو زده کړه يې ترلاسه کړې وه. هغه د ديني پوهې د ترلاسه کولو لپاره 15 کاله په هيواد کې دننه او له هيواد نه دباندې سفرونه کړي دي .
 
 == دندې ==
-ارواښاد خادم صاحب دلومړي ځل لپاره په ۱۳۰۴لمريز کال دکامې په ابتدائيه ښونځۍ کښي دښوونکي په توگه دندي په سرته رسولو وگمارل شو. پسله څه مودې هغه هندوستان ته سفر وکړ تر سفر وروسته کله چې وطن ته ودباره راوگرځيد دجلال آباد په يوه ښوونځۍ کې دښوونکي په توگه مقرر شو.
+ارواښاد خادم صاحب دلومړي ځل لپاره په ۱۳۰۴ ل. کال د کامې په ابتدائيه ښونځي کې د ښوونکي په توگه په دندې وگمارل شو. وروسته له يو څه مودې هغه هند ته سفر وکړ له سفر نه د بېرته راستنېدو سره يې د جلال آباد په يوه ښوونځي کې ښوونکی شو.
 
-خادم صاحب دوه نيم کاله په لواړگه کې اوسېده ،همدلته دشاعرۍ ،ليکوالی او ادبياتو سره دهغه مرموزي علاقي انکشاف پيداکړ ،همدلته په لواړگه کښي ېې کوزده او واده وکړ .
-خادم صاحب په ۱۳۱۲لمريز کال دلواړگي نه دکندهار ولايت ته ولاړ او هلته دکندهار دپښتو ادبي انجمن دغړې په توگه وگمارل شو. په ۱۳۱۴ لمريزکال داسد دمياشتي په ۲۵ نيټه دهغه وخت ددولتي اړونده چارواکو په امر او دستورد((پښتو ادبي انجمن ))له کندهار څخه کابل ته انتقال وموند ، چي په ۱۳۱۵ لمريز کال دغه انجمن په [[پښتو ټولنه]] ونومول شو . خادم صاحب دري مياشتي د((زيري )) داخبار دنشر ولو مسؤليت پر غاړه درلود . په ۱۳۱۸لمريزکال دتاليف او ترجمي دشعبې مدير مقرر شو ،اوپه ۱۳۲۰ لمريز کال دپشتو ټولني دعمومي رياست مرستيال اوپه ۱۳۲۱لمريزکال داتحاد مشرقي مدير اوپه ۱۳۲۴لمريزکال ددايره ت المعارف دترجمي مدير مقرر شو. په ۱۳۲۵لمريز کال دتعاوني ډيپو دتفتيش لوي مدير وټاکل شو ،څه وخت وروسته دهرات ولايت ته ولېږل شو . په ۱۳۲۹ لمريزکال دکندهار دطلوع افغان مدير په توگه وگمارل شو . په ۱۳۳۰ لمريزکال دکابل مجلې دچلوونکې دنده ورپغاړه شوه ،په ۱۳۳۱لمريز کال دسروبي دبرېښنا دفابريکې دکوپراتيف لوي مدير مقرر شو.
-په۱۳۳۲لمريزکال خادم صاحب د((اصلاح)) دورځپاڼي دمسؤل مدير په حيث وټاکل شو. خادم صاحب په مختلفو ددولت ي دندو گمارل شويدۍ اوپه مختلفو ځايو کښي يې دندي سرته رسولې دي ،دبيلگې په توگه داصلاح دورځپاڼي دمدريت ددندې تر سرته رسولو وروسته هغه څوکاله دپښتو ژبې دکورسونو مدير او په عين وخت کښي د((زيري)) داخبار دچلوونکي دنده هم پر غاړه درلوده . ارواښاد استاد قيام الدين خادم د پښتو ژبي او ادب يو پياوړى ليكوال، شاعر او پوه عالم و، او پدې لاره کښي يې زيات زيار ايستلۍ . خادم صاحب په رښتيا سره دپښتو ژبي او ادب خادم و ،په همدي دليل هغه د پښتو ژبي او ادب د ځلانده آسمان يوله روڼو ستورو څخه گڼل کيږي . استاد د پښتو ژبي او ادب په باب پوره او په زړه پوري منظوم او منثور آثار ليكلي اويوه ښه علمي ذخيره يې زموږ دهيواد راتونکي نسل ته پرې ايښې دي، چي اوس د پښتو ژبي او ادب ليوال ورباندي وياړ ي .
-د ارواښاد استاد خادم د منظومو او منثورو آثار وډير په زړه پوري کتابونه ليکلي او څورلس ځانگړي اثار يي چاپ شويدي چې دهغه جملې نه يې يو شمير لکه دکوچنيانو اخلاقي پالنه،روهي گلونه، دمر غلرو اميل ،نوی ژوند، مکارم الاخلاق،،پښتونولي،بايزيد روښان ، خيالي دنيا دشريف سرگذشت او نبوغ او عبرقربت دچاپ بخت موندلۍ او يو شمير نور اثار يي لاتر اوسه دهغه دخپلوانو په کورونو کې کښي ممکن په تاخچو اويا هم الماريو کښي دچاپ په انتظارزاړه سوې وي . "خيالي دنيا" دخادم صاحب ډير مشهور اثر دۍ چې دده د منثورو آثارو مجموعه ده ،دغه اثر ته د ادبي ټوټو مجموعه هم ويلاى سو.
-خيالي دنيا په 1339 هجري شمسي كال د پښتو ټولني له خوا د زرو ټوكو په تيراژ په 94 مخونو كښي د دولتي مطبعې له خوا چاپ سوى دى، د كتاب د ټولو ادبي ټوټو شمېر (( شپږ پنځوسو)) ته رسيږي چي هره ادبي ټوټه يې د افغاني ټولني كړه وړه تمثيلوي.
+خادم صاحب په ۱۳۱۲ ل. کال د لواړگي نه د کندهار ولايت ته ولاړ او هلته د کندهار د پښتو ادبي انجمن د غړي په توگه يې په کار پيل وکړ. په ۱۳۱۴ ل. کال د زمري مياشتې په ۲۵مه نېټه د هغه وخت د دولتي اړونده چارواکو په امر او دستور د پښتو ادبي انجمن له کندهار څخه کابل ته ولېږدېده، چي په ۱۳۱۵ ل. کال دغه انجمن په [[پښتو ټولنه]] ونومول شو. خادم صاحب ۳ مياشتې د زيري د ورځپاڼې د خپراوي پازه پر غاړه واخيستله. په ۱۳۱۸ ل. کال د تاليف او ترجمي د څانګې مدير وټاکلی شو، په ۱۳۲۰ ل. کال د پښتو ټولنې د عمومي رياست مرستيال او په ۱۳۲۱ ل. کال د اتحاد مشرقي مدير او په ۱۳۲۴ ل. کال د دايرة المعارف د ژباړې مدير مقرر شو. په ۱۳۲۵ ل. کال کې د تعاوني ډيپو د تفتيش لوی مدير وټاکل شو چې څه وخت وروسته د هرات ولايت ته ولېږل شو. په ۱۳۲۹ ل. کال د کندهار د طلوع افغان مدير په توګه يې دنده ترسره کړه. په ۱۳۳۰ ل. کال د کابل مجلې د چلوونکي دنده ور په غاړه وه او په ۱۳۳۱ ل. کال د سروبي د برېښنا د فابريکې د کوپراتيف لوي مدير وټاکل شو.
+په ۱۳۳۲ ل. کال خادم صاحب د اصلاح ورځپاڼې د مسؤل مدير په حيث په کار پېل وکړ. خادم صاحب په بېلابېلو دولتي دندو گمارل شوی دی او د هېواد په بېلابېلو ولايتونو کې يې دندې ترسره کړي دي د بيلگې په توگه د اصلاح ورځپاڼې د مدريت د دندې وروسته هغه څو کاله د پښتو ژبې د کورسونو مدير او په عين وخت کې د زيري ورځپاڼې د چلوونکي دنده هم پر غاړه درلوده. 
+
+== چاپ شوي آثار ==
+ارواښاد استاد خادم د منظومو او منثورو آثارو ډير په زړه پوري کتابونه ليکلي او ۱۴ ځانگړي اثار يي چاپ شوي دي چې د هغو نه يې يو شمير په دې توګه دي:
+#د کوچنيانو اخلاقي پالنه
+#روهي گلونه
+#د مرغلرو اميل 
+#نوی ژوند
+#مکارم الاخلاق
+#پښتونولي
+#بايزيد روښان
+#خيالي دنيا 
+#د شريف سرگذشت 
+#نبوغ 
+#عبرقربت 
+
+== ناچاپه آثار ==
+د نوموړي ګڼ شمېر نور اثار لا تر اوسه د هغه د خپلوانو په کورونو کې ممکن په تاخچو اويا هم الماريو کې د چاپ په انتظار زاړه شوي وي. "خيالي دنيا" د خادم صاحب ډير مشهور اثر دی چې د ده د منثورو آثارو مجموعه ده. دغه اثر ته د ادبي ټوټو مجموعه هم ويلاى شو. خيالي دنيا چې ټولټال ۹۴ مخونه لري، په 1339 ل. كال د پښتو ټولنې لخوا د ۱۰۰۰ ټوكو په شمېر د افغانستان په دولتي مطبعې کې چاپ شوى دى. د كتاب د ټولو ادبي ټوټو شمېر يې ۵۶ ته رسېږي چي هره ادبي ټوټه يې د افغاني ټولنې كړه وړه تمثيلوي.
 
 د كتاب ادبي ټوټو هره يوه يې دخپلي معنا اوهغومفاهيمو له مخي چې پكښي ځاى سوي دي د پښتو ادب د پراخه بڼ رنګارنګ ګلان ګڼل كيږي . كه دغه اثر په دقت ولوستل سي يوه لوى سمندر ته ورته دى چي هر څه پكښي موندل كيږي . خادم صاحب پدغو لنډو ادبي انځوروکښي مينه ، محبت، د ټولنيز ژوندرازونه ، آزادي، انتقاد، پرمختګ، عبادت، هنر او د ژوندانه ټولي لاري چاري لوسونکي ته ورښيي.
 مرحوم خادم صاحب په اردو،انگليسي او عربي ژبو بلد و ،دهمدغو ژبو په مرسته هغه ديوه کنجکاو او پلټونکي انسان په توگه تلاښ کاوه دډيرو شيانو په راز ځان پوه کړي ، کيداي شي دهغه دبرياليتوبو درازونو څخه يو هم همدا وبولو . 
