--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -52,8 +52,6 @@
 روهي صاحب ليکې داپورته ليکنه دخادم صاحب دنثر نمونه هم کيداي شي ؛ دده په نثر کي ايجازليدل کيږي اودځينو ليکوالو په شان دحق الحمې دپاره خبره نه اوږدوي ،بلکه نيغ په نيغه خپل مطلب بيانوي . پاي 
 
 
-يادونه : درنو لوستونکو! له بده مرغه دټولو هڅو او زيار تر څنگ مې ونشوه کولاي دخادم صاحب دژوند ليک په اړوند هغه څه راټول کړم کوم چي ما اړين بلل . پدي کار کې زه دځان لټي نه بلکه دامکاناتو او په بهر کي دعلمي او تاریخي کتابونود زيرمتونو دنشتوالي عمده لامل بولم . نه پوهيږم چې ولي زموږ دژبي دداسي ليکوالو دژوند په هکله دومره کم څه ليکل شوي دي ؟ چې دلوستونکي تنده نشي پري ماتيداي .
-تر کومه ځايه چې گران لوستونکي خبر دي دخادم صاحب اولادونه په امريکا کښي اوسې هيله مي داده چې هغوي دخپل پلار دژوند ليک په تکميل کولو کې مرسته وکړي .
 
 
-[[Category: پښتانه شاعران]]
+[[وېشنيزه: پښتانه شاعران]]
