--- a/خيالي_دنيا(کتاب).mw
+++ b/خيالي_دنيا(کتاب).mw
@@ -1,1 +1,1 @@
-دا د ارواښاد قيام الدين خادم يو پښتو منثور اثر دی.
+دا د ارواښاد قيام الدين خادم يو پښتو منثور اثر دی. "خيالي دنيا" د خادم صاحب ډير مشهور اثر دی چې د ده د منثورو آثارو مجموعه ده. دغه اثر ته د ادبي ټوټو مجموعه هم ويلاى شو. خيالي دنيا چې ټولټال ۹۴ مخونه لري، په 1339 ل. كال د پښتو ټولنې لخوا د ۱۰۰۰ ټوكو په شمېر د افغانستان په دولتي مطبعې کې چاپ شوى دى. د كتاب د ټولو ادبي ټوټو شمېر يې ۵۶ ته رسېږي چي هره ادبي ټوټه يې د افغاني ټولنې كړه وړه تمثيلوي.
