--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -27,9 +27,7 @@
 #عبرقربت 
 
 == ناچاپه آثار ==
-د نوموړي ګڼ شمېر نور اثار لا تر اوسه د هغه د خپلوانو په کورونو کې ممکن په تاخچو اويا هم الماريو کې د چاپ په انتظار زاړه شوي وي. "خيالي دنيا" د خادم صاحب ډير مشهور اثر دی چې د ده د منثورو آثارو مجموعه ده. دغه اثر ته د ادبي ټوټو مجموعه هم ويلاى شو. خيالي دنيا چې ټولټال ۹۴ مخونه لري، په 1339 ل. كال د پښتو ټولنې لخوا د ۱۰۰۰ ټوكو په شمېر د افغانستان په دولتي مطبعې کې چاپ شوى دى. د كتاب د ټولو ادبي ټوټو شمېر يې ۵۶ ته رسېږي چي هره ادبي ټوټه يې د افغاني ټولنې كړه وړه تمثيلوي.
-
-د كتاب ادبي ټوټو هره يوه يې دخپلي معنا اوهغومفاهيمو له مخي چې پكښي ځاى سوي دي د پښتو ادب د پراخه بڼ رنګارنګ ګلان ګڼل كيږي . كه دغه اثر په دقت ولوستل سي يوه لوى سمندر ته ورته دى چي هر څه پكښي موندل كيږي . خادم صاحب پدغو لنډو ادبي انځوروکښي مينه ، محبت، د ټولنيز ژوندرازونه ، آزادي، انتقاد، پرمختګ، عبادت، هنر او د ژوندانه ټولي لاري چاري لوسونکي ته ورښيي.
+د نوموړي ګڼ شمېر نور اثار لا تر اوسه د هغه د خپلوانو په کورونو کې ممکن په تاخچو اويا هم الماريو کې د چاپ په انتظار زاړه شوي وي. 
 مرحوم خادم صاحب په اردو،انگليسي او عربي ژبو بلد و ،دهمدغو ژبو په مرسته هغه ديوه کنجکاو او پلټونکي انسان په توگه تلاښ کاوه دډيرو شيانو په راز ځان پوه کړي ، کيداي شي دهغه دبرياليتوبو درازونو څخه يو هم همدا وبولو . 
 خادم صاحب نه يوازي د علم او پوهې په ډگر کي افغان ولس ته خدمت کاوه بلکه په سياسي ډگر کښي هم دهيواد دسياسي څيرو په قطار کي ورته دقدر په سترگه کتل کيده .
 ښاغلی غبار د((افغانستان در مسير تايريخ )) دوهم ټوک په ۲۳۸ مخ کښي ليکې : په ۱۳۲۶ لمريز کال يوه سياسي گوند دويښ زلميانو په نامه علني فعاليت پيل کړ . ددي گوند بنسټ ايښودونکی او مشران په کابل ،کندهار او ننگرهاکي دا کسان يادوي : عبدالروف بينوا،گل پاچو الفت، فيض محمد انگار ،نورمحمد ترهکي ،غلام حسن خان سپي ،( اين دونفر اخير ازدسته عبدالمجيد زابلي بودند) ،محمدرسول خان پشتون،عبدالشکورخان رشاد،عبدالهادي توخي ،محمدانورخان اڅکزائي ،قاضي بهرام خان ،غلام جيلاني خان ،قاضي عبدالصمد خان ،فتح محمد خان، خټگر، نور محمد خان قاضي خيل،محمد ابراهيم خواخوږۍ،محمد ناصر خان لعل پوري، صوفي ولي محمد خان، آغامحمد خانکرزی ،محمد موسي خان شفيق ،غلام محمدخان پوپل ،محمد طاهر خان صافی ،قيام الدين خان خادم ، ارسلاخان سليمي وردگ ،نيلک محمدخان پکتيانی ،صديق الله خان رښتين، عبدالعزيز خان ،عبدلخالق خان واسعي ،محمد علم خان، نوراحمد شاکر، محمدرسول خان مسلم، محمد حسين خان رېدی، عبدالرزاق فراهي ،محمد نور خان علم ،عبيد الله خان صافی، گل شاه خان صافی، ظهورالله خان همدرد،محمدشريف خان قاضي ،عبدالمنان خان دردمند،آقامليا ،عبدالصمدخان ويسا ،محمد علم بڅرکی وچند نفر ديگر . منشي حزب در اوايل عبدالروف خان بينوا ودر اواخر عبدالرزاق خان فراهي بود. افغانستان در مسير تاريخ دوهم جلد ۲۳۸ مخ 
