/* چاپ شوي آثار */

--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -21,10 +21,10 @@
 #مکارم الاخلاق
 #پښتونولي
 #بايزيد روښان
-#خيالي دنيا 
+#[[خيالي دنيا(کتاب)|خيالي دنيا]] 
 #د شريف سرگذشت 
 #نبوغ 
-#عبرقربت 
+#عبرقربت
 
 == ناچاپه آثار ==
 د نوموړي ګڼ شمېر نور اثار لا تر اوسه د چاپ په انتظار دي. 
