--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -50,6 +50,25 @@
 زه داټولي خبري اورم مگر دځان سره وايم : ((ډيري خولې ډيري خبري )) .
 روهي صاحب ليکې داپورته ليکنه دخادم صاحب دنثر نمونه هم کيداي شي ؛ دده په نثر کي ايجازليدل کيږي اودځينو ليکوالو په شان دحق الحمې دپاره خبره نه اوږدوي ،بلکه نيغ په نيغه خپل مطلب بيانوي . پاي 
 
+== د شعر بېلګه ==
+<center>
+د شاعر مسلک
+{{شعر}}
+{{ب|صحيح لاره به ښايم که وم وم که نه وم نه وم|رښتيا رښتيا به وايم که وم وم که نه وم نه وم}}
+{{ب|د حق د پيروی نه مې بل څه په زړه کې نشته|چې ځه يم همدا يم که وم وم که نه وم نه وم}}
+{{ب|آزاد يم زېږېدلې بندگي کولی نشم|بنده د خپل مولا يم که وم وم که نه وم نه وم}}
+{{ب|په بډو خوشامندو مې څوک خوښ نه دی چې غټ شم|که غټ يم خوهمدا يم که وم وم که نه وم نه وم}}
+{{ب|چې څوک غواړي څه سپکه مې د قام د څه جهته|دښمن د هغه چا يم که وم وم که نه وم نه وم}}
+{{ب|په ماته کښتی سپور يم طوفانونه می په مخ کې|په دغه لار ئې بيايم که وم وم که نه وم نه وم}}
+{{ب|خدمت د خپلې خاورې ، قام، وطن زما مسلک دی|په دې مينه به پا يم که وم وم که نه وم نه وم}}
+{{ب|په ټينگ عهد و پېمان چې مې بيحت ورسره کړی|دده په تولا يم که وم وم که نه وم نه وم}}
+{{ب|لرم ښکلي تخمونه چې گلزار شي پښتنو ته|په دغه تمنا يم که وم وم که نه وم نه وم}}
+{{ب|د ناز په خوب ويدې غونچې به ورو ورو ويښومه|خادم باد د صبايم که وم وم که نه وم نه وم}}
+{{د شعر پای}}
+</center>
+
+
+
 
 
 
