*Empty MediaWiki Message*

--- a/پياز.mw
+++ b/پياز.mw
@@ -1,5 +1,4 @@
-
-== سرليک ==
+--[[ځانګړی:ونډې/212.34.96.80|212.34.96.80]] 17:40, 7 فبروري 2009 (UTC)
 پياز
 د خوراك وړ يو بوټى دى چې د سابو له ډېرو مهمو او ارزښتمنو بوټو نه ګڼل كيږي . 
 د خوندورو او ګټورو سابو له شمېر نه پياز هم د بېلابېلو ناروغيو په درملنه كې او هم  د بدن د پياوړتيا لپاره ګټور دى . پياز يو داسې هېښنده بوټى دى ، چې هېڅ داسې يوه د كور مېرمن به نه وي چې له پيازو نه به په پخلي او خواړو كې كار وانخلي . پياز په سلاټو ،  ښوروا ، سوپ ، پټاټو ، قورمې ، غوښې ، پلو او نورو بېلابېلو خواړو كې كاريږي . همدا راز زموږ په ګران هېواد افغانستان كې له پيازو نه پيره كي هم پخوي چې ډېر خوندور وي . دغه خوندور او اشتها راپاروونكى بوټى هم خام او هم پوخ خوړول كيږي ، خو دويم وريانټ يې ښايي چې د ځينو خلكو خوښ نه وي . موږ انسانان د پيازو له خوراك او كارونې سره دومره روږدي شوي يو چې ډېرى وختونه مو هېر وي چې د كال په هر موسم كې داسې ارزانه او اغېزمن درمل ته لاسرسى لرو چې هر څوك يې د بېلابېلو ناروغيو سره په مبارزه كې كارولاى شي .
