--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -54,16 +54,16 @@
 <center>
 د شاعر مسلک
 {{شعر}}
-{{ب|صحيح لاره به ښايم که وم وم که نه وم نه وم|رښتيا رښتيا به وايم که وم وم که نه وم نه وم}}
-{{ب|د حق د پيروی نه مې بل څه په زړه کې نشته|چې ځه يم همدا يم که وم وم که نه وم نه وم}}
-{{ب|آزاد يم زېږېدلې بندگي کولی نشم|بنده د خپل مولا يم که وم وم که نه وم نه وم}}
+{{ب|صــحـــيــح لاره بـــه ښــايــم کــه وم وم که نه وم نه وم|رښتـيـا رښتـيـا به وايم که وم وم که نه وم نه وم}}
+{{ب|د حــق د پــيــروی نه مې بل څــه په زړه کــې نـشــتــه|چې ځه يم همدا يم که وم وم که نه وم نه وم}}
+{{ب|آزاد يــــم زېــــږېـــدلــې بــنـــدگــي کــولـــــی نــشــــم|بنده د خپل مولا يم که وم وم که نه وم نه وم}}
 {{ب|په بډو خوشامندو مې څوک خوښ نه دی چې غټ شم|که غټ يم خوهمدا يم که وم وم که نه وم نه وم}}
-{{ب|چې څوک غواړي څه سپکه مې د قام د څه جهته|دښمن د هغه چا يم که وم وم که نه وم نه وم}}
-{{ب|په ماته کښتی سپور يم طوفانونه می په مخ کې|په دغه لار ئې بيايم که وم وم که نه وم نه وم}}
-{{ب|خدمت د خپلې خاورې ، قام، وطن زما مسلک دی|په دې مينه به پا يم که وم وم که نه وم نه وم}}
-{{ب|په ټينگ عهد و پېمان چې مې بيحت ورسره کړی|دده په تولا يم که وم وم که نه وم نه وم}}
-{{ب|لرم ښکلي تخمونه چې گلزار شي پښتنو ته|په دغه تمنا يم که وم وم که نه وم نه وم}}
-{{ب|د ناز په خوب ويدې غونچې به ورو ورو ويښومه|خادم باد د صبايم که وم وم که نه وم نه وم}}
+{{ب|چې څــوک غــواړي څه سپــکــه مې د قام د څه جهته|دښمن د هغه چا يم که وم وم که نه وم نه وم}}
+{{ب|پـه مـاتـه کـښـتی ســپـور يــم طوفانونه می په مخ کې|په دغه لار ئې بيايم که وم وم که نه وم نه وم}}
+{{ب|خــدمت د خپلــې خــاورې ، قام، وطن زما مســلـک دی|په دې مينه به پا يم که وم وم که نه وم نه وم}}
+{{ب|پــه ټينــگ عهــد و پېمــان چې مې بيعــت ورسـره کړی|دده په تولا يم که وم وم که نه وم نه وم}}
+{{ب|لــرم ښکــلي تخمــونه چې گــلــزار شــي پښتنــو تــه|په دغه تمنا يم که وم وم که نه وم نه وم}}
+{{ب|د ناز پــه خوب ويــدې غونچــې بــه ورو ورو ويــښــومــه|خادم باد د صبايم که وم وم که نه وم نه وم}}
 {{د شعر پای}}
 </center>
 
