--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -55,15 +55,15 @@
 د شاعر مسلک
 {{شعر}}
 {{ب|صــحـــيــح لاره بـــه ښــايــم کــه وم وم که نه وم نه وم|رښتـيـا رښتـيـا به وايم که وم وم که نه وم نه وم}}
-{{ب|د حــق د پــيــروی نه مې بل څــه په زړه کــې نـشــتــه|چې ځه يم همدا يم که وم وم که نه وم نه وم}}
-{{ب|آزاد يــــم زېــــږېـــدلــې بــنـــدگــي کــولـــــی نــشــــم|بنده د خپل مولا يم که وم وم که نه وم نه وم}}
-{{ب|په بډو خوشامندو مې څوک خوښ نه دی چې غټ شم|که غټ يم خوهمدا يم که وم وم که نه وم نه وم}}
-{{ب|چې څــوک غــواړي څه سپــکــه مې د قام د څه جهته|دښمن د هغه چا يم که وم وم که نه وم نه وم}}
-{{ب|پـه مـاتـه کـښـتی ســپـور يــم طوفانونه می په مخ کې|په دغه لار ئې بيايم که وم وم که نه وم نه وم}}
-{{ب|خــدمت د خپلــې خــاورې ، قام، وطن زما مســلـک دی|په دې مينه به پا يم که وم وم که نه وم نه وم}}
-{{ب|پــه ټينــگ عهــد و پېمــان چې مې بيعــت ورسـره کړی|دده په تولا يم که وم وم که نه وم نه وم}}
-{{ب|لــرم ښکــلي تخمــونه چې گــلــزار شــي پښتنــو تــه|په دغه تمنا يم که وم وم که نه وم نه وم}}
-{{ب|د ناز پــه خوب ويــدې غونچــې بــه ورو ورو ويــښــومــه|خادم باد د صبايم که وم وم که نه وم نه وم}}
+{{ب|د حــق د پــيــروی نه مې بل څــه په زړه کــې نـشــتــه|چـې ځـه يـم همـدا يم که وم وم که نه وم نه وم}}
+{{ب|آزاد يــــم زېــــږېـــدلــې بــنـــدګــي کــولـــــی نــشــــم|بنــده د خپــل مــولا يم که وم وم که نه وم نه وم}}
+{{ب|په بډو خوشامندو مې څوک خوښ نه دی چې غټ شم|که غـټ يم خوهمدا يم که وم وم که نه وم نه وم}}
+{{ب|چې څــوک غــواړي څه سپــکــه مې د قام د څه جهته|دښمــن د هغــه چا يم که وم وم که نه وم نه وم}}
+{{ب|پـه مـاتـه کـښـتی ســپـور يــم طوفانونه می په مخ کې|پــه دغــه لار ئې بيـايم که وم وم که نه وم نه وم}}
+{{ب|خــدمت د خپلــې خــاورې ، قام، وطن زما مســلـک دی|په دې ميـنـه به پــا يم که وم وم که نه وم نه وم}}
+{{ب|پــه ټينــګ عهــد و پېمــان چې مې بيعــت ورسـره کړی|دده پــه تــولا يــم کــه وم وم کــه نــه وم نـه وم}}
+{{ب|لــرم ښکــلي تخمــونه چې ګــلــزار شــي پښتنــو تــه|پــه دغــه تمــنــا يــم کـه وم وم که نه وم نه وم}}
+{{ب|د ناز پــه خوب ويــدې غونچــې بــه ورو ورو ويــښــومــه|خــادم بــاد د صبــايم کــه وم وم که نه وم نه وم}}
 {{د شعر پای}}
 </center>
 
