*Empty MediaWiki Message*

--- a/خيالي_دنيا(کتاب).mw
+++ b/خيالي_دنيا(کتاب).mw
@@ -1,2 +1,9 @@
 دا د ارواښاد قيام الدين خادم يو پښتو منثور اثر دی. "خيالي دنيا" د خادم صاحب ډير مشهور اثر دی چې د ده د منثورو آثارو مجموعه ده. دغه اثر ته د ادبي ټوټو مجموعه هم ويلاى شو. خيالي دنيا چې ټولټال ۹۴ مخونه لري، په 1339 ل. كال د پښتو ټولنې لخوا د ۱۰۰۰ ټوكو په شمېر د افغانستان په دولتي مطبعې کې چاپ شوى دى. د كتاب د ټولو ادبي ټوټو شمېر يې ۵۶ ته رسېږي چي هره ادبي ټوټه يې د افغاني ټولنې كړه وړه تمثيلوي.
 د كتاب ادبي ټوټو هره يوه يې دخپلي معنا اوهغومفاهيمو له مخي چې پكښي ځاى سوي دي د پښتو ادب د پراخه بڼ رنګارنګ ګلان ګڼل كيږي . كه دغه اثر په دقت ولوستل سي يوه لوى سمندر ته ورته دى چي هر څه پكښي موندل كيږي . خادم صاحب پدغو لنډو ادبي انځوروکښي مينه ، محبت، د ټولنيز ژوندرازونه ، آزادي، انتقاد، پرمختګ، عبادت، هنر او د ژوندانه ټولي لاري چاري لوسونکي ته ورښيي.
+
+
+
+
+
+[[وېشنيزه:پښتو کتابونه]]
+[[وېشنيزه:کتابونه]]
