*Empty MediaWiki Message*

--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -1,4 +1,4 @@
-'''ارواښاد قيام الدين خادم''' د پښتو ژبي او ادب يو پياوړى ليكوال، شاعر او پوه عالم و، او پدې لاره کښي يې زيات زيار ايستلۍ . خادم صاحب په رښتيا سره دپښتو ژبي او ادب خادم و ،په همدي دليل هغه د پښتو ژبي او ادب د ځلانده آسمان يوله روڼو ستورو څخه گڼل کيږي . استاد د پښتو ژبي او ادب په باب پوره او په زړه پوري منظوم او منثور آثار ليكلي اويوه ښه علمي ذخيره يې زموږ دهيواد راتونکي نسل ته پرې ايښې دي، چي اوس د پښتو ژبي او ادب ليوال ورباندي وياړ ي .
+'''ارواښاد قيام الدين خادم''' د پښتو ژبي او ادب يو پياوړى ليكوال، شاعر او پوه عالم و، او پدې لاره کې يې زيات زيار ايستلۍ . نوموړی په پښتو ادب کې يو ځانګړی ځای لري او په همدې سبب هغه د پښتو ژبې او ادب د ځلانده ستورو څخه يو ستوری ګڼل کېږي. هغه د پښتو ژبې او ادب په باب پوره او په زړه پوري منظوم او منثور آثار ليكلي او يوه ښه علمي ادبي زېرمه يې زموږ د هيواد راتونکي نسل ته پرې ايښې ده.
 
 == مخينه ==
 قيام الدين خادم په ۱۲۸۶ لمريز کال دکامې ولسوالۍ په يوې روحاني کورنۍ کې دنيا ته سترګې پرانيستي دي . د ارواښاد خادم پلار مرحوم ملا حسام الدين اخوند پخپله سيمه کې يو مشهور او پوه عالم و. خادم صاحب دوه نيم کاله په لواړگي کې اوسېده ،همدلته د شاعرۍ ،ليکوالۍ او ادبياتو سره د هغه مرموزې لېوالتياوې راوټوکېدې، بيا په لواړګي کې پاتې شو او هماغلته يې کوزده او واده وکړ.
