--- a/کوروف.mw
+++ b/کوروف.mw
@@ -1,4 +1,15 @@
-This article is on English. Please for translate it on Pashtu.
+[[انځور:POL Kurów COA.svg|thumb|د کوروف د کلي پېژندنښنه]]
+'''کوروف''' په سوېل-ختيځ پولېنډ کې د يو کلي نوم دی چې د پووافې او لوبلين تر مېنځ د کوروفکا د رود پر غاړه پروت دی. دا د يوې ځانته سيمې، ګمينا کوروف پلازمېنه ده چې د لوبلين په ولکه کې شمېرل کېږي. په دې کلي کې ۲۸۰۴ (د ۲۰۰۷ کال د سرشمېرنې له مخې) وګړي مېشت دي.
+
+
+
+
+
+
+
+
+
+
 
 [[ab:Курув]]
 [[af:Kurów]]
