/* چاپ شوي آثار */

--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -17,14 +17,39 @@
 #د کوچنيانو اخلاقي پالنه
 #روهي گلونه
 #د مرغلرو اميل 
-#نوی ژوند
-#مکارم الاخلاق
+#نوی ژوندون
+#مکارم اخلاق
 #پښتونولي
 #بايزيد روښان
 #[[خيالي دنيا(کتاب)|خيالي دنيا]] 
 #د شريف سرگذشت 
-#نبوغ 
-#عبرقربت
+#نبوغ او عبقريت (فلسفي اثر)
+#نوې رڼا
+#د پښتو نني ليکوال
+#د پښتو د تاريخ يوه سرپاڼه
+#د خوشحال او د رحمان موازنه
+#څاروان
+#د څلورم ټولګي لپاره د پښتو قرأت
+#پښتو کلي (په ۶ ټوکو کې)
+#پښتو معلم
+#پښتانه شعرا (لومړی ټوک)
+#پارتيان څوک ؤ
+#د بابا نصيحت
+#د پښتو پټۍ
+#د پښتو نثر تاريخي تصورات
+#لوی سهاک
+#ادبي قصې
+#لوی اصحابان (اصحاب کرام)
+#نشنليزم او انټرنشنليزم
+#افغاني حکومت
+#د پښتو نثر
+#معياري پښتو
+#بلکا
+#د پښتو څټه او څانکې
+#نصوص الحکم
+#د مور مينه
+#لرغوني پښتانه قومونه
+#ټولنپال افغان مونوفېسټ (د مولانا قيام الدين خادم سياسي افکار)
 
 == ناچاپه آثار ==
 د نوموړي ګڼ شمېر نور اثار لا تر اوسه د چاپ په انتظار دي. 
