/* چاپ شوي آثار */

--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -26,7 +26,7 @@
 #نبوغ او عبقريت (فلسفي اثر)
 #نوې رڼا
 #د پښتو نني ليکوال
-#د پښتو د تاريخ يوه سرپاڼه
+#د پښتنو د تاريخ يوه سرپاڼه
 #د خوشحال او د رحمان موازنه
 #څاروان
 #د څلورم ټولګي لپاره د پښتو قرأت
