/* چاپ شوي آثار */

--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -34,6 +34,8 @@
 #پښتو معلم
 #پښتانه شعرا (لومړی ټوک)
 #پارتيان څوک ؤ
+#په تذکرة الاوليا تبصره
+#کوشانيان څوک ؤ
 #د بابا نصيحت
 #د پښتو پټۍ
 #د پښتو نثر تاريخي تصورات
