--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -54,7 +54,30 @@
 #ټولنپال افغان مونوفېسټ (د مولانا قيام الدين خادم سياسي افکار)
 
 == ناچاپه آثار ==
-د نوموړي ګڼ شمېر نور اثار لا تر اوسه د چاپ په انتظار دي. 
+د نوموړي ګڼ شمېر نور اثار لا تر اوسه نه دي خپاره شوي. د ناچاپو کتابونو لړليک يې په لاندې توګه دی او موږ په دې هيله يو چې يوه ورځ د دغو کتابونو د چاپولو زيری واورو. 
+#د پښتونخوا قصې
+#مکالمات
+#غرضه حُب خير
+#سورګل
+#کانفرانسونه
+#کره پښتو
+#پښتو زده کړه
+#د پښتو شاعري
+#پښتو په غربي ليکدود کې
+#پښتني پور
+#شلمه پېړۍ او پښتانه
+#د پښتنو قومولي
+#غوره سندرې
+#د پښتنو مشاعرې
+#لرغوني افغانان
+#آينده پښتنو ته
+#د تنقيد حق
+#ساتلې خزانه
+#ريګويدي سرودونه (يا سرود های ريګويدي)
+#د پښتونولۍ ادب
+
+
+
 مرحوم خادم صاحب په اردو،انگليسي او عربي ژبو بلد و ،د همدغو ژبو په مرسته هغه ديوه کنجکاو او پلټونکي انسان په توگه تلاښ کاوه دډيرو شيانو په راز ځان پوه کړي، کيداي شي دهغه دبرياليتوبو درازونو څخه يو هم همدا وبولو.
  
 خادم صاحب نه يوازي د علم او پوهې په ډگر کي افغان ولس ته خدمت کاوه بلکه په سياسي ډگر کښي هم دهيواد دسياسي څيرو په قطار کي ورته دقدر په سترگه کتل کيده .
@@ -75,7 +98,7 @@
 ۴ / هو،په دي يوه گناه زه پخپله هم قانع يم چې هغه دحقيقت مينه بايد وبولم . 
 خلک په امورو کې دنورو نورو ملاحظاتومراعات کوي ،مگر زه په حقيقت او واقيعت پښې نشم ايښوداي. ما خپل دغه عادت په هغه نظم کې چي (دشاعر مسلک) يي نوم دی شه تصوير کړی دی .
 زه داټولي خبري اورم مگر دځان سره وايم : ((ډيري خولې ډيري خبري )) .
-روهي صاحب ليکې داپورته ليکنه دخادم صاحب دنثر نمونه هم کيداي شي ؛ دده په نثر کي ايجازليدل کيږي اودځينو ليکوالو په شان دحق الحمې دپاره خبره نه اوږدوي ،بلکه نيغ په نيغه خپل مطلب بيانوي . پاي 
+روهي صاحب ليکې داپورته ليکنه دخادم صاحب دنثر نمونه هم کيداي شي ؛ دده په نثر کي ايجازليدل کيږي اودځينو ليکوالو په شان دحق الحمې دپاره خبره نه اوږدوي ،بلکه نيغ په نيغه خپل مطلب بيانوي . پاي
 
 == د شعر بېلګه ==
 <center>
