--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -76,8 +76,7 @@
 #ريګويدي سرودونه (يا سرود های ريګويدي)
 #د پښتونولۍ ادب
 
-
-
+== ځانګړی وړتوب ==
 مرحوم خادم صاحب په اردو،انگليسي او عربي ژبو بلد و ،د همدغو ژبو په مرسته هغه ديوه کنجکاو او پلټونکي انسان په توگه تلاښ کاوه دډيرو شيانو په راز ځان پوه کړي، کيداي شي دهغه دبرياليتوبو درازونو څخه يو هم همدا وبولو.
  
 خادم صاحب نه يوازي د علم او پوهې په ډگر کي افغان ولس ته خدمت کاوه بلکه په سياسي ډگر کښي هم دهيواد دسياسي څيرو په قطار کي ورته دقدر په سترگه کتل کيده .
