--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -106,14 +106,14 @@
 {{ب|صــحـــيــح لاره بـــه ښــايــم کــه وم وم که نه وم نه وم|رښتـيـا رښتـيـا به وايم که وم وم که نه وم نه وم}}
 {{ب|د حــق د پــيــروی نه مې بل څــه په زړه کــې نـشــتــه|چـې ځـه يـم همـدا يم که وم وم که نه وم نه وم}}
 {{ب|آزاد يــــم زېــــږېـــدلــې بــنـــدګــي کــولـــــی نــشــــم|بنــده د خپــل مــولا يم که وم وم که نه وم نه وم}}
-{{ب|په بډو خوشامندو مې ځان خوښ نه دی چې غټ شم|که غټ يم خو همدا يم که وم وم که نه وم نه وم}}
+{{ب|په بډو خوشامندو مې ځان خوښ نه دی چې غټ شـم|که غټ يم خو همدا يم که وم وم که نه وم نه وم}}
 {{ب|چې څــوک غــواړي څه سپــکــه مې د قام د څه جهته|دښمــن د هغــه چا يم که وم وم که نه وم نه وم}}
 {{ب|پـه مـاتـه کـښـتی ســپـور يــم طوفانونه می په مخ کې|پــه دغــه لار ئې بيـايم که وم وم که نه وم نه وم}}
-{{ب|خــدمت د خپلــې ژبې، قام، وطن زما مســلـک دی|په دې ميـنـه به پـــايم که وم وم که نه وم نه وم}}
+{{ب|خــدمت د خپـلــې ژبــې، قـام، وطـن زمـا مســلــک دی|په دې ميـنـه به پـــايم که وم وم که نه وم نه وم}}
 {{ب|پــه ټينــګ عهــد و پېمــان چې مې بيعــت ورسـره کړی|دده پــه تــولا يــم کــه وم وم کــه نــه وم نـه وم}}
 {{ب|کــرم ښکــلي تخمــونه چې ګــلــزار شــي پښتنــو تــه|پــه دغــه تمــنــا يــم کـه وم وم که نه وم نه وم}}
-{{ب|په ماته کشتۍ ناست يم طوفانونه دي په مخ کې|په دې لاره يې بيايم که وم وم که نه وم نه وم}}
-{{ب|د ناز پــه خوب ويــدې غونچــې ورو ورو راويــښــومــه|خــادم بــاد د صبــايم کــه وم وم که نه وم نه وم}}
+{{ب|په ماتـه کشتـۍ ناسـت يـم طـوفـانونه دي په مـخ کـې|په دې لاره يـې بيـايم کـه وم وم که نه وم نه وم}}
+{{ب|د ناز پــه خوب ويــدې غونـچـــې ورو ورو راويــښـــومـــه|خــادم بــاد د صبــايم کــه وم وم که نه وم نه وم}}
 {{د شعر پای}}
 </center>
 
