/* چاپ شوي آثار */

--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -31,7 +31,7 @@
 #څاروان
 #د څلورم ټولګي لپاره د پښتو قرأت
 #پښتو کلي (په ۶ ټوکو کې)
-#پښتو معلم
+# معلم پښتو
 #پښتانه شعرا (لومړی ټوک)
 #پارتيان څوک ؤ
 #په تذکرة الاوليا تبصره
