--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -120,7 +120,7 @@
 == سرچينې ==
 
 == باندنۍ تړنې ==
-
+[http://scprd.com/hdra/view.php?id=23 د ارواښاد مولانا قيام الدين خادم ژوندليک]
 
 [[وېشنيزه: پښتانه]]
 [[وېشنيزه: پښتانه ليکوالان]]
