--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -118,6 +118,7 @@
 </center>
 
 == سرچينې ==
+*د نور تفصيل دپاره وګورۍ : اوسني ليكوال، لومړۍ ټوك، 1340، 292 مخ.
 
 == باندنۍ تړنې ==
 [http://scprd.com/hdra/view.php?id=23 د ارواښاد مولانا قيام الدين خادم ژوندليک]
