--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -104,7 +104,7 @@
 د شاعر مسلک
 {{شعر}}
 {{ب|صــحـــيــح لاره بـــه ښــايــم کــه وم وم که نه وم نه وم|رښتـيـا رښتـيـا به وايم که وم وم که نه وم نه وم}}
-{{ب|د حــق د پــيــروی نه مې بل څــه په زړه کــې نـشــتــه|چـې ځـه يـم همـدا يم که وم وم که نه وم نه وم}}
+{{ب|د حــق د پــيــروۍ نه مې بل څــه په زړه کــې نـشــتــه|چـې څـه يـم همـدا يم که وم وم که نه وم نه وم}}
 {{ب|آزاد يــــم زېــــږېـــدلــې بــنـــدګــي کــولـــــی نــشــــم|بنــده د خپــل مــولا يم که وم وم که نه وم نه وم}}
 {{ب|په بډو خوشامندو مې ځان خوښ نه دی چې غټ شـم|که غټ يم خو همدا يم که وم وم که نه وم نه وم}}
 {{ب|چې څــوک غــواړي څه سپــکــه مې د قام د څه جهته|دښمــن د هغــه چا يم که وم وم که نه وم نه وم}}
