--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -1,7 +1,7 @@
 '''ارواښاد قيام الدين خادم''' د پښتو ژبي او ادب يو پياوړى ليكوال، شاعر او پوه عالم و، او پدې لاره کې يې زيات زيار ايستلۍ . نوموړی په پښتو ادب کې يو ځانګړی ځای لري او په همدې سبب هغه د پښتو ژبې او ادب د ځلانده ستورو څخه يو ستوری ګڼل کېږي. هغه د پښتو ژبې او ادب په باب پوره او په زړه پوري منظوم او منثور آثار ليكلي او يوه ښه علمي ادبي زېرمه يې زموږ د هيواد راتونکي نسل ته پرې ايښې ده.
 
 == مخينه ==
-قيام الدين خادم په ۱۲۸۶ لمريز کال دکامې ولسوالۍ په يوې روحاني کورنۍ کې دنيا ته سترګې پرانيستي دي . د ارواښاد خادم پلار مرحوم ملا حسام الدين اخوند پخپله سيمه کې يو مشهور او پوه عالم و. خادم صاحب دوه نيم کاله په لواړگي کې اوسېده ،همدلته د شاعرۍ ،ليکوالۍ او ادبياتو سره د هغه مرموزې لېوالتياوې راوټوکېدې، بيا په لواړګي کې پاتې شو او هماغلته يې کوزده او واده وکړ.
+قيام الدين خادم په ۱۲۸۶ لمريز کال دکامې ولسوالۍ په يوې روحاني کورنۍ کې دنيا ته سترګې پرانيستي دي . د ارواښاد خادم پلار مرحوم ملا حسام الدين اخوند پخپله سيمه کې يو مشهور او پوه عالم و.<ref>'''اوسني ليکوال''' - د [[عبدالروف بېنوا]] اثر - لومړی ټوک، د چاپکال ۱۳۴۰ - ۲۹۲ مخ.</ref> خادم صاحب دوه نيم کاله په لواړگي کې اوسېده ،همدلته د شاعرۍ ،ليکوالۍ او ادبياتو سره د هغه مرموزې لېوالتياوې راوټوکېدې، بيا په لواړګي کې پاتې شو او هماغلته يې کوزده او واده وکړ.
 
 == زده کړې ==
 لومړنۍ زده کړې يې پخپل کور کې د خپلو والدينو څخه تر سره کړي دي . خادم صاحب د اسلامي علومو ګڼ شمير کتابونه لوستي وه؛ هغه صرف ،نحوه ،منطق حکمت ،فقه ،حديث ، تفسير او د نور دوديزو علومو زده کړه يې ترلاسه کړې وه. هغه د ديني پوهې د ترلاسه کولو لپاره 15 کاله په هيواد کې دننه او له هيواد نه دباندې سفرونه کړي دي .
