--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -79,7 +79,7 @@
 == ځانګړی وړتوب ==
 مرحوم خادم صاحب په اردو،انگليسي او عربي ژبو بلد و ،د همدغو ژبو په مرسته هغه ديوه کنجکاو او پلټونکي انسان په توگه تلاښ کاوه دډيرو شيانو په راز ځان پوه کړي، کيداي شي دهغه دبرياليتوبو درازونو څخه يو هم همدا وبولو.
  
-خادم صاحب نه يوازي د علم او پوهې په ډگر کي افغان ولس ته خدمت کاوه بلکه په سياسي ډگر کې هم ښکېل وه او د افغانستان په سياست کې يوه پېژندل شوې څېره وه.<ref>'''افغانستان در مسير تاريخ''' - د [[عبدالروف بېنوا]] اثر - دوهم ټوک، د چاپکال ۱۳۲۶ ل.- ۲۳۸ مخ.</ref>
+خادم صاحب نه يوازي د علم او پوهې په ډگر کي افغان ولس ته خدمت کاوه بلکه په سياسي ډگر کې هم ښکېل وه او د افغانستان په سياست کې يوه پېژندل شوې څېره وه.<ref>'''افغانستان در مسير تاريخ''' - د [[غبار]] اثر - دوهم ټوک، د چاپکال ۱۳۲۶ ل.- ۲۳۸ مخ.</ref>
 ښاغلی غبار د افغانستان در مسير تاريخ دوهم ټوک په ۲۳۸ مخ کښي ليکې: په ۱۳۲۶ ل. کال يوه سياسي گوند د ويښ زلميانو په نامه علني فعاليت پيل کړ . ددي گوند بنسټ ايښودونکی او مشران په کابل ،کندهار او ننگرهاکي دا کسان يادوي : عبدالروف بينوا،گل پاچو الفت، فيض محمد انگار، نورمحمد تره کي، غلام حسن خان ساپي، (اين دو نفر اخير از دسته عبدالمجيد زابلي بودند)، محمد رسول خان پشتون، عبدالشکور رشاد، عبدالهادي توخي، محمد انور خان اڅکزی، قاضي بهرام خان، غلام جيلاني خان، قاضي عبدالصمد خان، فتح محمد خان، خټگر، نور محمد خان قاضي خيل، محمد ابراهيم خواخوږۍ، محمد ناصر خان لعل پوري، صوفي ولي محمد خان، آغا محمد خانکرزی، محمد موسي خان شفيق، غلام محمد خان پوپل، محمد طاهر خان صافی، قيام الدين خادم، ارسلا خان سليمي وردگ، نيک محمد خان پکتيانی، صديق الله رښتين، عبدالعزيز خان، عبدالخالق خان واسعي، محمد علم خان، نور احمد شاکر، محمد رسول خان مسلم، محمد حسين خان رېدی، عبدالرزاق فراهي، محمد نور خان علم، عبيد الله خان صافی، گل شاه خان صافی، ظهور الله خان همدرد، محمد شريف خان قاضي، عبدالمنان خان دردمند، آقامليا، عبدالصمد خان ويسا، محمد علم بڅرکی و چند نفر ديگر. منشي حزب در اوايل عبدالروف خان بينوا و در اواخر عبدالرزاق خان فراهي بود. افغانستان در مسير تاريخ دوهم جلد ۲۳۸ مخ 
 د ( ۱۳۲۷ ش)کال د جوزا د مياشتی په اوومه د ويښو ځلميانو د تدارک د کميسون د لارښوونی له مخې د کندهار، ننګرهار او کابل يو شمير ادبی او عرفانی ملګرو لکه عبدالرؤف بينوا، فيض محمدانګاز، نورمحمد تره کی، قيام الدين خادم، صديق الله رښتين، ګل پاچا الفت، نيک محمد پکتيانی، محمد ارسلان سليمی، عبدالقدوس پرهيز، ابو الحسن هزاره، پاينده محمد روهيلي، محمد ولی ځلمی، عطا محمد شېرزی، محمد طاهر تائب او ځينو نورو ليکوالانو او روښنفکرانو د موسسی کنګری غړو چې شمير يې دوه ويشتو تنو ته رسيدی د دارالامان په افشار وکې د عبدالمجيد زابلی دنوی تعمير په يوه سالون کې د ماسپښين پر دوو بجو د ويښو ځلميانو دگوند جوړولولپاره دبيلو بيلوولايتونو د نمايندګانو طرحي وړاندی شوی چې يوه يې د عبدالروف بينوا او نور محمد تره کی، بله يې د قيام الدين خادم او دريمه يې د صديق الله رشتين وه. لومړی يې مترقي او عصری، دوهمه يې ملی اوو طنی،دريمه يې مذهبی او کلتوری رنګ درلود. د زيات بحث وروسته د ټولو طرحو د مهمو مادو په ګډون پر دغو ټوکودټولو موافقه راغله : د اسلام او مشروطه شاهی نظام او د پاچاد مقام درناوی، د دولت د دروګونو قواؤ ترمنځ لکه اجرئيه، مقنينه، قضائېه تفکيک او بيلوالی ، دهغوي د حقوقو او صلاحيتونو ټاکل، د ازادو انتخاباتوپر اساس درابلل شوي لويی جرګی د لاری د وخت دغوښتنو سره سم په اساسي قانون کې تعديلات او تغيرات راوستل ، داساسي قانون پلي کول، د علم او معارف خپرېدل او پراختيا، د مطبوعاتو، دفکر او بيان د آزادۍ تظمينول، د هر ډول نژادي، ژبني، او سيمه ايزو تعصب او لوړتيا غوښتنومخه نيول، د قانون په واسطه د افرادو طبيعی اوټولنيزو حقوقو تأ مينول، ظلم، رشوت، پټي سوداگری (قاچاق) او بی عدالتيو سره مبارزه کول، په ټولنيز ژوندکې د افراط او تفريط څخه ډډه کول، د تخنيک اوصنعت رواجول، په هېواد کې دهر چاله پاره د کار او تعليم د زميني برابرول، د کارګرو او بزګرو حقوق، اقتصادی او زراعتي اصلاحاتو ته پاملرل، د موهوماتو او مزخرفاتو سره مجادله کول، د ملی ژبی پښتو او پښتونستان د ملی خودارديت پرننګه درېدل، د بشر د حقوق د اعلاميې او بين المللي صلح او سلم غوښتل او په عملی صورت بې تطبيقول . 
 بڅرکی صاحب په پورته يادشوي کتاب کې ليکلې چي دويښ زلميانو دجنبش لومړې مرام په ۱۳۲۷ او دوهم يي په ۱۳۲۸ لمريزکال دزمري دمياشتي په ۲۷ نيټه تصويب شوېدی . گران لوستونکي محمد علم بڅرکی (( ويښ ځلميان دافغانستان يو سياسي تحريک)) په نامه کتاب کښي دخادم صاحب او پښتو ادب دشپږو ستورو دسياسي فعاليت په اړوند معلومات تر لاسه کولاي شي .
