--- a/چاد.mw
+++ b/چاد.mw
@@ -271,6 +271,7 @@ The largest Christian churches are the [[Roman Catholic Church]], the
 [[ml:ഛാഡ്]]
 [[mr:चाड]]
 [[ms:Chad]]
+[[mzn:چاد]]
 [[na:Chad]]
 [[nah:Chad]]
 [[nds:Tschad]]
