*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -25,7 +25,7 @@
 
 <br><br>
 <br><br>
-{{دکارن-جعبه}}
+{{د-ن-و-ا راټول}}
 <br>
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
