--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -103,6 +103,16 @@ __NOTOC__
 [[:وېشنيزه:Main|ټولګړي]] - [[ځانګړی:وېشنيزې|ټولې وېشنيزې]] - [[ويکيپېډيا:مستندې ليکنې|مستندې ليکنې]] </div>
 
 |}
+<!--------------------------------د نن ورځې مستند انځور------------------------------->
+{| style="border-spacing:8px; margin:-8px -8px;"
+|class="MainPageBG" style="width:100%; border:1px solid #ddcef2; background:#faf5ff; vertical-align:top; color:#000;"|
+{| cellpadding="2" cellspacing="5" style="vertical-align:top; background:#faf5ff; color:#000"
+! <h2 style="margin:0; background:#ddcef2; font-size:120%; font-weight:bold; border:1px solid #afa3bf; text-align:center; color:#000; padding:0.2em 0.4em;">د نن ورځې مستند انځور</h2>
+|-
+|style="color:#000;"| {{دنن-ورځ-انځور ژغورلی/{{CURRENTYEAR}}-{{CURRENTMONTH}}-{{CURRENTDAY2}}}}
+|-
+|}
+|}
 
 
 {{ويکيپېډيا:لومړی مخ/سرليک|د ويکي مېډيا نورې پروژې}}
