--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -53,55 +53,14 @@ type=create
 *********************************************************
 __NOTOC__
 |-
-| width="50%" style="vertical-align:top; border:1px solid #ccc; background:#fff; padding:.5em;" |
-<div style="align:center; margin-left: 5px; padding:5px; text-align: center; background-color: #f9f9f9; border: 1px solid #e9e9e9;"><br />
-=== ژوندليکونه ===
-[[لوبګران]] - [[هنرمندان]] - [[ليکوالان]] - [[:وېشنيزه:پښتانه شاعران|پښتانه شاعران]] - [[ډرامه ليکونکي]] - [[کمپوزران]] - [[موسيقي جوړونکي]] - [[سندرغاړي]] - [[فلمي لارښودګران يا ډايرکټران]] - [[د نندارو ليکوالان]] - [[مخترعين]] - [[ساينسپوهان]] - [[شمېرپوهان]] - [[فيلسوفان]] - [[اقتصادپوهان]] - [[تاريخپوهان]] - [[پوه اندي]] - [[سياستپوهان]] - [[اصيلان]] - [[انقلابيان]] - [[لوبغاړي]] - [[طبيبان]] - [[اتلان]] - [[هوابازان]] - [[ستورمزلي]] - [[غازيان]] - [[قاريان]] -[[کاشفان]]- [[مولويان]] - [[ملايان]] - [[خبريالان]]- [[سياستوال]] - [[ولسمشران]] - [[پاچايان]] - [[ملکې]] - [[وزيران]]
-
-=== بوب ساينس ===
-
-[[ستورپوهنه]] - [[ستورپېژندنه]] - [[بوټپوهنه]] - [[کيميا]] - [[چاپېريال پوهنه]] - [[خزدکې (حشرات) پېژندنه]] - [[شمېر پوهنه ]] - [[فزيک]] - [[ځمکپېژندنه]] - [[ژونپوهنه]] - [[سرشمېرنه]]- [[طب]] - [[درملپوهنه]]- [[درملپېژندنه]] - [[ژونکيميا]] - [[رنځپوهنه]] 
-
-=== ټولنيزې پوهنې ===
-
-[[وګړپوهنه]] - [[توکمپوهنه]] - [[ژيولرغونپوهنه]] - [[لرغونپوهنه]] - [[ښوونپوهنه]] - [[ځمکپوهنه]] - [[پېښليک (تاريخ)]]  - [[ژبې]] - [[ژبپوهنه]] - [[موزيکپوهنه]] - [[د کوچنيانو روزنه]] - [[فلسفه]] - [[ساپوهنه]] - [[د پوهېدلو علم]] -  [[کتابتون او خبرتيايي ساينس]] - [[ټولنپوهنه]]- [[وټپوهنه]]
-
-=== حقوق او ټولنيزې چارې ===
-
-[[سوداګري]] - [[ساتنه]] - [[حقوق]] - [[اقتصاد]] - [[شرکتونه]] - [[کورنۍ]] -
-[[مسلکونه]] - [[ښاريتوب]]
-
-=== نړېوال دينونه ===
-
-[[مذهب]] - [[زردشتي]] - [[هندويزم]] - [[بوديزم]] - [[يهوديت]] - [[عيسويت]] - [[اسلام]] - [[سکهيزم]] - [[انيميزم]] - [[اتيزم]] -  [[جاينيزم]] - [[تصوف]] - [[د ملنګانو ګروهې]] - [[بهايي]] - [[روحانيت]]  
-</div>
-
-<br style="clear:right;" />
-| width="50%" style="vertical-align:top; border:1px solid #ccc; background:#fff; padding:.5em;" |
-<div style="float:right; margin-left: 5px; padding:5px; text-align: center; background-color: #f9f9f9; border: 1px solid #e9e9e9;"><br />
-
-=== هنر او فرهڼ ===
-[[هنرونه]] - [[هنر د ليدلو]] - [[هنر د اورېدلو]] - [[ښکلي هنرونه]] - [[عملي هنر]] - [[سينما]] -[[ ننداره]] -  [[ولسي کلتور]] - [[ګډا، نڅا]] - [[ادبيات]] - [[رسنۍ]] - [[ساز]] - [[عکاسي]] - [[موسيقی]] - [[فلم]] - [[شعر]] - [[افسانه]] - [[ناول]] - [[داستان]] - [[لنډۍ]] - [[هايکو]] - [[ازاد شعر]] - [[غزل]] - [[لنډه کيسه]] - [[پښتو ټولنه]]
-
-=== تخنيک او صنعتونه ===
-
-[[فضانوردي]] - [[کرهنه]] - [[ودانېدنګ]] - [[مخابرات]]  - [[برېښنا]] - [[ برېښنايي ټېکنالوژي]] - [[صنعت]] - [[کمپيوټرپوهنه]] - [[انجينري]] - [[د کمپنۍ مشري]] - [[تخنيک]] - [[د تماس اسانتياوې]] - [[ترانسپورت]] - [[اهمې پنځونې]]
-
-=== ورځينی ژوند او چارچلن ===
-
-[[پخپله يو څه جوړول]] - [[پخلی]] - [[ساعتيري]] - [[بڼ پالنه]] - [[لوبې]] - [[خواړه]] - [[روغتيا]] - [[جنسي اړيکې]] - [[ورزښت]] - [[ګرځندويي (ټوريزم)]] - [[دندې]]
-
-=== دولت او سياست ===
-
-[[پوځ]] - [[اقتصاد]] - [[سياست]] - [[اساسي قانون]] - [[قانوني لاسوندونه]] - [[ګوندونه]] - [[نړېوال تنظيمونه]] - [[بشري حقونه]] - [[د ځايونو نيوليک]] - [[پيسې]] - [[پښتو]] - [[افغانستان]]  - [[ملګري ملتونه]] - [[روانې چارې]] - [[نور هېوادونه]] - [[دګوندونو مشران]]
-
-=== ډله ايزې رسنۍ ===
-
-[[ټيلويزون]] - [[راډيو]] - [[ورځپاڼه]] - [[رساله]] - [[انټرنټ]] - [[خبريالي]] - [[ويکپيديا ليکونکی ]] - [[Wikipedia:List of portals|List of portals]]
-
-ويکيپېډيا د وېشنيزو له مخې<br />
-[[:وېشنيزه:Main|ټولګړي]] - [[ځانګړی:وېشنيزې|ټولې وېشنيزې]] - [[ويکيپېډيا:مستندې ليکنې|مستندې ليکنې]] </div>
-
+<!-----------------------د ويکيپېډيا مېنځپانګه ------------------------>
+{|style="border-spacing:8px; margin:0px -8px;"
+|class="MainPageBG" style="width:55%; border:1px solid #cef2e0; background:#f5fffa; vertical-align:top; color:#000;"|
+{|width="100%" cellpadding="2" cellspacing="5" style="vertical-align:top; background:#f5fffa;"
+! <h2 style="margin:0; background:#cef2e0; font-size:120%; font-weight:bold; border:1px solid #a3bfb1; text-align:center; color:#000; padding:0.2em 0.4em;">د ويکيپېډيا مېنځپانګه</h2>
+|-
+|style="color:#000;"| {{د ويکيپېډيا مېنځپانګه}}
+|-
 |}
 <!--------------------------------د نن ورځې مستند انځور------------------------------->
 {| style="border-spacing:8px; margin:-8px -8px;"
