--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -57,7 +57,7 @@ __NOTOC__
 {|style="border-spacing:8px; margin:0px -8px;"
 |class="MainPageBG" style="width:55%; border:1px solid #cef2e0; background:#f5fffa; vertical-align:top; color:#000;"|
 {|width="100%" cellpadding="2" cellspacing="5" style="vertical-align:top; background:#f5fffa;"
-! <h2 style="margin:0; background:#cef2e0; font-size:120%; font-weight:bold; border:1px solid #a3bfb1; text-align:center; color:#000; padding:0.2em 0.4em;">د ويکيپېډيا مېنځپانګه</h2>
+! <h2 style="margin:0; background:#cef2e0; font-size:120%; font-weight:bold; border:1px solid #a3bfb1; text-align:center; color:#000; padding:0.2em 0.4em;">مېنځپانګه</h2>
 |-
 |style="color:#000;"| {{د ويکيپېډيا مېنځپانګه}}
 |-
