*Empty MediaWiki Message*

--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -52,8 +52,7 @@ type=create
 </td></tr></table><br>
 *********************************************************
 __NOTOC__
-|-
-<!-----------------------د ويکيپېډيا مېنځپانګه ------------------------>
+|-<!-----------------------د ويکيپېډيا مېنځپانګه ------------------------>
 {|style="border-spacing:8px; margin:0px -8px;"
 |class="MainPageBG" style="width:55%; border:1px solid #cef2e0; background:#f5fffa; vertical-align:top; color:#000;"|
 {|width="100%" cellpadding="2" cellspacing="5" style="vertical-align:top; background:#f5fffa;"
