*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -25,7 +25,13 @@
 
 <br><br>
 <br><br>
-{{د-ن-و-ا راټول}}
+    * {{ملاتړ}} ( ملاتړ),
+    * {{بډ}} ( بډ),
+    * {{خنثا}} ( خنثا),
+    * {{انګېرنه}} ( انګېرنه),
+    * {{مالومات}} ( مالومات:),
+    * {{پوښتنه}} ( پوښتنه: ).
+
 <br>
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
