--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -24,15 +24,19 @@
 [[جهاد جوهری]]
 
 <br><br>
-<br><br>
-    * {{ملاتړ}} ( ملاتړ),
-    * {{بډ}} ( بډ),
-    * {{خنثا}} ( خنثا),
-    * {{انګېرنه}} ( انګېرنه),
-    * {{مالومات}} ( مالومات:),
-    * {{پوښتنه}} ( پوښتنه: ).
+===Voting===
+You can use following templates to vote for the wikipedian that you want him to become a :
+* <nowiki>{{ملاتړ}}  </nowiki> ({{ملاتړ}}),
+* <nowiki>{{بډ}}   </nowiki> ({{بډ}}),
+* <nowiki>{{خنثا}}  </nowiki> ({{خنثا}}),
+* <nowiki>{{انګېرنه}}  </nowiki> ({{انګېرنه}}),
+* <nowiki>{{مالومات}}  </nowiki> ({{مالومات}}),
+* <nowiki>  {{پوښتنه}}</nowiki> ({{پوښتنه}}).
+You can indicate that the image has no chance of success with the template <nowiki>{{FPX|reason}}</nowiki>, where ''reason'' explains why the image is clearly unacceptable as a FP. 
 
-<br>
+Please include a few words about why you liked/didn't like the picture, '''especially''' when you vote oppose. Remember also to put your signature (<nowiki>~~~~</nowiki>).   Anonymous votes are not allowed.
+
+
 == د پښتو ويکيپېډيا د ليدنمخ (Interface) ژباړونکي ==
 [[مجاور احمد زيار|پوهاند مجاراحمدزيار]]<br>
 [[کارونکی:احمد-نجيب-بياباني-ابراهيمخېل|احمد نجيب بياباني ابراهيمخېل]]
