/* چاپ شوي اثار */

--- a/محمود_نظري.mw
+++ b/محمود_نظري.mw
@@ -14,28 +14,27 @@
 دلسګونو مقالواو ژباړو نه برسېره يې لاندني اثار چاپ شوي دي .
 
 == چاپ شوي اثار ==
-چاپ شوي اثار :
-۱- د څوکۍ خوند  ( د طنزو ټولګه)
-۲- سر خلاص که !   ( د طنزو ټولګه)
-۳-انساني سرکس   ( د طنزو ټولګه)
-۴-پايلوچ بنګ حبيب الله ( د لنډو کيسو ټولګه ) 
-۵-خندنۍ بهرنۍ ټوکي( د بهرنی ټوکو او ټکالو ژباره)
-۶- خدا روزيش کنه ( د طنزو ټولګه ) 
-۷-آسماني کتابونه
-۸-اسلام او نننۍ ساینس
-۹-هوا( د لنډو کيسو ټولګه ) 
-۱۰-پایلوچان(ناول)
-د چاپ لاندی آثار :
-- خندنۍ بهرنۍ ټوکي- دویم ټوک( د بهرنی ټوکو او ټکالو 
-راټولونه او ژباړه)
-- مهاجر زمری( د طنزو ټولګه )
-- د نړۍ د ادبیاتو افسانه يې الوتونکی
+#د څوکۍ خوند  ( د طنزو ټولګه)
+#سر خلاص که !   ( د طنزو ټولګه)
+#انساني سرکس   ( د طنزو ټولګه)
+#پايلوچ بنګ حبيب الله ( د لنډو کيسو ټولګه ) 
+#خندنۍ بهرنۍ ټوکي( د بهرنی ټوکو او ټکالو ژباره)
+#خدا روزيش کنه ( د طنزو ټولګه ) 
+#آسماني کتابونه
+#اسلام او نننۍ ساینس
+#هوا( د لنډو کيسو ټولګه ) 
+#پایلوچان(ناول)
+
+== د چاپ لاندی آثار : ==
+
+#خندنۍ بهرنۍ ټوکي- دویم ټوک( د بهرنی ټوکو او ټکالو راټولونه او ژباړه)
+#مهاجر زمری( د طنزو ټولګه )
+#د نړۍ د ادبیاتو افسانه يې الوتونکی
 د کرنې په برخه کې په کتابی بڼه دا آثار چاپ شوي دي:
-  
-۱-زعفران
-۲-د مېوولرونکو ونو ډېرونه
-۳-د روميانو پيازو او بېنډيو وچول
-۴-باغباني
+#زعفران
+#د مېوولرونکو ونو ډېرونه
+#د روميانو پيازو او بېنډيو وچول
+#باغباني
 
 == د طنز يوه بېلګه ==
  
