robot  Adding: [[mn:Хабибулла Хан]]

--- a/امير_حبيب_الله_خان.mw
+++ b/امير_حبيب_الله_خان.mw
@@ -36,6 +36,7 @@
 [[fr:Habibullah]]
 [[ja:ハビブッラー・ハーン]]
 [[ka:ჰაბიბულა]]
+[[mn:Хабибулла Хан]]
 [[no:Habibullah Khan]]
 [[pl:Habibullah Chan]]
 [[ur:امیر حبیب اللہ خان]]
