--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -91,7 +91,7 @@
 
 ارواښاد کانديد اکاديميسن سر محقق صديق روهي دده په اړه په خپل کتاب دپښتو دادبياتو تاريخ کي ليکي {{دوراشې کامه|''کله چې دويښ زلميانو پر ادبياتو باندي بحث کيږي نو لومړی ځل پاره دحبيبي، الفت ، بينوا ،خادم ، رښتين او رشاد نومونه په ذهن کې تداعي کيږي ،ځکه چې دپشتو دمعياري ژبي ، ليکدود (املأ) او ادبي سبک په پالنه کې ډير ستر خدمتونه تر سره کړي او زيات شاگردان يې روزلي دي .''.|20px|}}  
 لوي استاد ((حبيبي ))او فاضل استاد ((رشاد)) دواړه دادبي او تاريخي څيړنو سر لاري اوپه خپله برخه کښي دتبحر په لحاظ بې ساري دی .محترم استاد پوهاند رښتين هم په گرامر او ادبي تاريخ کې لوي لاس لري . الفت ،بينوا او خادم که څه هم ادبي څيړني تر سره کړي خو هغوي زياتره درښتيا ددورې دنامتو شاعرانو په توگه شهرت لري )) روهي صاحب داهم زياتوي چې {{دوراشې کامه|''خادم صاحب دپښتو او پښتونولۍ اودهيواد له ترقی سره ډيره مينه درلوده،هغه دښو احساساتو خاوند اودلهجې سراحت يې درلود''.|20px|}} 
-استاد خادم په اوسني ليکوالو کې خپل ژوند ليک خپورکړی دی ،په يوه برخه کې يې د(( زما پر حيات انتقادات)) تر سر ليک لاندي داسي ليکلي دي : {دوراشې کامه|''په ژوندانه کې هيڅوک له انتقاده نه دی خلاص هغه انتقادونه چې په مايي خلک کوي دادي : 
+استاد خادم په اوسني ليکوالو کې خپل ژوند ليک خپورکړی دی ،په يوه برخه کې يې د(( زما پر حيات انتقادات)) تر سر ليک لاندي داسي ليکلي دي : {{دوراشې کامه|''په ژوندانه کې هيڅوک له انتقاده نه دی خلاص هغه انتقادونه چې په مايي خلک کوي دادي : 
 ۱/ وايي نه منونکی سړۍ دی . دا انتقاد په ماباندي زما والدې هم هر وخت کاوه ،مگر زما جواب داو چې که زه منونکی واي خوزه به هم دنورو خلکو غوندي واي . په ورکوټوالي به مي دمور سره تل په دې جنگ و.دې به ويل : خلک داسي کوي اوته داسي،مابه ويل چې : ( خلک راته مه يادوه خلک خو هر حه کوي ! ! ! .)
 ۲/ وايي ډير بحث کوي اونه قانع کيږي . . . دا خبره نشم فيصله کولاي چې دادخلکو قصور دی اوکه زماعيب؟ استادان به هم زما پوښتنو ته اريان وو،زه پخپله هم پدې قانع يمچې بحث مي خوښ دی، مگر په اساسي او اصولي خبرو. نه مطلق بحث . . . 
 ۳ / وايي ((سر شوخه دي)) مگر دوستان مي وايي ادبي شجاعت لري .په ورکوپوالي کې راته خلکو ويل چي ((کلانکاردی )) ولي په آزادی خو زه په خپله هم قايل يم او دا ځکه چي دا طبعي بار زماپه ورميږ نشته .
